--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,23 +1,16 @@
 ---
-title: 樱花头条┃拜登政府正准备公布首个亚太地区经济战略
+title: 美国和上合组织较量
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968282/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968402/)
 
-撰稿：东京樱花团/樱花传媒
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/拜登政府正准备公布首个亚太地区经济战略.jpg)
+1月12日，郭文贵先生在GTV大直播透露，上合组织是江家势力，（塔吉克斯坦）承诺把江家利益永远保护好，甚至高于宪法。阿富汗事件是美国和上合组织的较量，包括俄罗斯、白俄罗斯、吉尔吉斯斯坦、阿塞拜疆、哈萨克斯坦、中共等都是上合组织的主要力量。美国和上合组织都想通过阿富汗争夺中亚的石油市场。
 
-在中共不断扩大地区影响力的大背景下，这份经济战略一直为美国盟友和美国商业团体所期待。
-
-《华尔街日报》说，拜登政府将新的印太框架视为美国努力超越安全关系以对抗中共在亚洲日益增长的野心的重要一步。
-
-信息来源：[https://gettr.com/post/psyhjhed64](https://gettr.com/post/psyhjhed64)
-
-*编辑：东京樱花团/keyboard racing
-发布：东京樱花团/老黑*
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
