--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,18 +1,15 @@
 ---
-title: 巴西新冠死亡人数创历史新高达1308人
+title: 一帘幽梦的缘起
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968233/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968294/)
 
-撰稿：东京樱花团/立正道
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-618.png)图片来源于本文链接
-路透社，圣保罗2月5日，巴西卫生部长宣布，过去24小时内确诊的中共病毒（新冠病毒Covid-19）死亡人数达到1308人，新增感染人数达到197442人。死亡人数是自去年7月29日以来的最高水平。
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-此外，据圣保罗州官员称，上周在该州发现了两例 Omicron 菌株衍生物“BA.2”。
+2月1日，郭文贵先生在GTV大直播透露，一帘幽梦这首歌缘起于被救助的战友，是上天派这位战友送来的缘分。由郭文贵先生演唱的这首一帘幽梦，让文贵先生过去的老同事们感到幸福，也鼓励着他们对中共永不妥协的决心。每个人都要懂得，人生最重要的是一定要有信仰。
 
-信息来源：[ブラジルのコロナ死者が過去最多1308人、約6カ月ぶりに更新](https://jp.reuters.com/article/worldNews/idJPKBN2KC02W)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/ 平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
