--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,24 +1,45 @@
 ---
-title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
+title: 今天下午 5 点，所有自由车队卡车和平的撤离了魁北克市中心
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1968252/)
 
-撰稿：待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
-2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
+2022-02-06
 
-在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
+作者：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/02/D2AEMGLRNIIJQ3NCNTG.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 下午 5 点，最后一批自由车队卡车和平地撤离了魁北克市中心
 
-在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
+TVA Nouvelles（2022年2月6日，下午5点46分）发表一篇题为《所有卡车已经撤离了魁北克市中心》的文章报道，今天下午 5 点，在围观的示威者的掌声中，最后一批自由车队卡车和平地撤离了魁北克市中心，自由车队称计划在两周内返回魁北克市。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/@8I_LDVCD1C88G0SFQPC.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 最后一批停在勒内-莱维斯克大道（boulevard René-Lévesque）上的卡车在围观的示威者的欢呼声中离开了
 
-于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
+魁北克市警察局警告卡车抗议者，下午 5 点（2022年2月6日）后将不再允许车辆通行，那些不离开的卡车将被罚款，甚至被拖走，“以避免（构成）继续违章犯罪”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/O81SPCGAMHI@ROA@AGK.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+在（2022年2月6日）下午 5 点后不久，在最后一批（围观的）示威者的掌声中，所有卡车都和平地离开了（示威）现场
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WSHBDPZQ25IPKIB1XO.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+#### “自由车队”在两周内重新返回
 
-然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
+然而，魁北克“自由车队”的组织者计划在两周内重新返回，以“给勒戈Legault（做出）让步的时间”，并制作一个以“自由”为主题的“伍德斯托克（伍德斯托克音乐艺术节）”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/04M3JKIEGY8LFFVW.png)图片来源： 截屏于[Rendez-vous dans 2 semaines: quitter pour mieux revenir](https://www.tvanouvelles.ca/2022/02/06/rendez-vous-dans-2-semaines-bernard-rambo-gauthier-demande-aux-manifestants-de-quitter)图中显示伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）在演讲
+“我们今晚就走，但我们会在两星期后回来[…]。你有 15 天的时间来准备 […]，（回来时）我们会有更多的人”，伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）周五下午（2022年2月4日）这样说。
 
-翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
+另外，Gnews（2022 年 2 月 5 ）发表一篇题为《[自由车队：在新平台上筹集的资金已超过90万元](https://gnews.org/zh-hans/1963141/)》的文章报道，在 GoFundMe 拒绝向全国各地示威反对强制接种疫苗的卡车司机支付筹集的资金后，他们（卡车司机）转向另一个平台，而且已经筹集了近 100 万元。
 
-信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
+## 请读者学习2月6号郭先生Gettre视频
 
+2月6号郭先生发表了题为《[尊敬的战友们好！关于如何使用GTV帮助加拿大卡车反疫苗运动的几点声明！](https://gettr.com/post/pswoyr9fbf)》的Gettre视频。
+
+这次卡车司机的行动背后的政治博弈非常激烈。请读者，特别是身处北美的战友，记住，新中国联邦人是有信仰，有底线的，一定要坚持，为真不破，报道真相，不煽动或鼓励暴力。相信郭先生完全有能力和智慧以和平方式消灭世界的一切不公平。欢迎读者访问并在“[加拿大温哥华圆成农场](https://gettr.com/user/himalayavang)”上留言。
+
+参考链接：
+[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+
+编辑：LILY
+发布：肥鯮
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
