--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,12 +1,12 @@
 ---
-title: 共产党年年办一场充斥着各种假恶丑的春晚
+title: 被抓的董宏曾经对文贵先生说共产党就是黑社会流氓骗子
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968367/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968489/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-2月1日，郭文贵先生在GTV大直播透露，中共的春晚是洗脑的，藏污纳垢，充斥着金钱交易、性交易。大牌演员和普通演员待遇不同。中央电视台的每样摆设都有回扣，电视播的都是假唱、假录。但是老百姓付的都是真钱，真感情。90%以上的人都反应不过来，中央电视台是最肮脏的地方。
+1月30日，郭文贵先生在GTV大直播透露，被判死缓的董宏，是王岐山最信任的马仔，拿走中国多少钱？董曾告诉郭先生，共产党就是黑社会流氓骗子，傻子才相信它 ，聪明人利用这个黑社会达到自己的目的。中国第一家破产的广东信托公司，就是王、董和康典干的。后来，董又把张宏伟的新华人寿给了康，王、董、康等因此在瑞士拿走了几百亿美元。
 
 *编辑：东京樱花团/tdownc2p
 发布：东京樱花团/平安卿卿*
