--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,23 +1,27 @@
 ---
-title: 俄罗斯感染中共病毒的记录创历史新高
+title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968152/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
 
-#### 撰稿：彩虹       
+#### 撰稿：彩虹       
 
 #### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-615.png)图片来源：ABC News
-2月6日，《国会山报》引述《美联社》报道，周日，俄罗斯新增中共病毒（COVID-19）病例创下历史纪录，达到189,071个，比周六的感染病例增加了2800例，比一个月前报告的感染数量增加了10倍。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
+2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
 
-然而，尽管病例数上升，俄罗斯因感染中共病毒的死亡人数略有下降。周日有661人死亡，而1月初报告的死亡人数为796人。然而，俄罗斯确实是欧洲因感染中共病毒死亡人数最多的国家，整个中共病毒疫情期间报告的死亡人数超过335,400人，其COVID-19（中共病毒）工作组还报告了1,280万例病毒感染者。
+威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
 
-随着病例的激增，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）上周表示，当局不打算实行任何封锁或其他COVID-19限制措施。
+他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
 
-根据报道，尽管俄罗斯是世界上最早提供中共病毒（COVID-19）疫苗的国家之一，但只有约一半的人口接种了中共病毒疫苗。
+施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
 
-**新闻报道**
+据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
 
-[Russia COVID-19 infections 10 times higher than one month ago](https://thehill.com/policy/international/593037-russia-covid-19-infections-ten-times-higher-than-one-month-ago)
+根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
+
+**新闻来源**
+
+[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
 
  
 
