--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,33 +1,47 @@
 ---
-title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
+title: 猪窝里的老人，何时能有个避风躲雨的屋檐
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1968167/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
-图片来源：网路图片
+作者：香草山健身部-新世界的一员
 
-据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
 
-俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good.png)
+寒冬凛然，一位垂暮的老人住在没有门窗、没有取暖设施的像猪圈一样的房子里，一大帮穿着红色义工服的人围着破房子唱歌祝福。一个手拿拿照相机的人焦点对着抹眼泪的老奶奶，一个老爷爷被挤出房子外面，团缩着身子哭笑不得地看着这一大帮人。
+视频源自网络
+这样的视频，让我的汗毛根根竖起。在这样寒冷的天气里，在这样没有门窗没有吃穿的环境下，她们竟然唱着祝福你快乐祝福你长寿的歌曲，可怜可悲的中国人呀，被中共的假大空灌输得没有了半点道德、常识，失去了真正的善良；又蠢又笨又无知的人们呀，要到什么时候才会停止这样滑稽的做秀，做出点实事，干出点实际性行动？又或者不要去打扰已经够可怜的老人家了。
 
-她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
+其实我们中国人是世界上最善良的人民，我们历代来把有钱人家做好事，行善事，称之为积德。行好事，说好话，做好人，广积德，这些都是我们的传统美德，很多侠义的故事也流传至今，教导人们要传承这样的品质。 平时频繁的聊天中，很多人会谈自己能为社会做些什么好事，可很多人也都会说，现在假的太多，不想把善心变成形式，还为他人提供谋利谋名的帮凶。
 
-她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
+好一个“不想把善心变成形式，还为他人提供谋利谋名的帮凶。”捣毁人们善念的是中国共产党，它设置的红十字的假恶丑压垮了中国人行善的义举，是中国共产党红十字会包养的情妇，郭美美的晒富，让所有善良的人们，失去了做慈善的信心和真心。
 
-隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
+笔者过去曾经参加过很多的义工活动和慈善活动，每一次回来，做了好事的心情比不做的时候更闷闷不乐，因为每一次活动，每一次组织，都是一大帮人过去送点米送点吃，然后大拍特拍，晒朋友圈、晒抖音、晒下面虚伪的评论。我可怜可悲的同胞们，伪装成好人打扰贫穷的人家，其实就是在行平庸之恶。有的也许是真心想做好事，但被裹挟着一起做戏；有的是赶个热闹；有的要拍个照好给人一种做好事的形象；有的甚至是借此或者趁机谋利，就如笔者参加过的一个活动，名叫狮子会，压根就是骗善良人的钱，每年需要交会费，而不需要捐赠衣服或其他物资，更不能直接给贫困人员孤寡老人钱，理由都是有统一安排。但实际情况是没有任何一个组织真正去关心贫困家庭的人，更别说出现帮助解决困难的人。行善一旦跌落成戏子的节奏，还有什么人性可言？
 
-对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
+看到这样无窗无门的居所，心情是沉重的。我们中国人在共产党的奴役下，到底还有多少这样的杨改兰式的家庭？不消灭中国共产党，中国人永远杜绝不了吃不起、穿不起，住不起、生不起、死不起的悲催结局；不打破中共的假恶丑，我们中国人就一直走不出它设置的虚伪的怪圈。人假如没有信仰，所有的行动基本都是形式主义，这是中国共产党刻意传播丑陋，被感染了愚昧病的多数中国人的心理，中共是颠倒善恶的邪教组织。
 
-各国代表队已经开始公开批评。
+在墙国只怕这样住猪圈的老人们，处处可见。中共存在一天，他们想有个避风躲雨的屋檐就永远是个奢侈的梦想，我们中国人该结束这样悲惨的遭遇了，消灭中共是解决天下父母最基本吃住的必须！
 
-在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
 
-比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
 
-瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-17.jpg)
 
-新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
+编辑/校对/发稿：兰兰
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-1.png)
+
 
  
 
