--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,25 +1,27 @@
 ---
-title: 俄罗斯入侵将在几天内造成5万名乌克兰人伤亡
+title: 英国军方最新报告警告来自太空的核攻击
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968048/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968088/)
 
-#### 撰稿：彩虹       
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-10.jpg)
+图片来源：www.secretchina.com
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-613.png)图片来源：波士顿先驱报
-2月6日，《新闻极限》报道，虽然拜登政府在其关于俄罗斯可能入侵乌克兰的信息传递中放弃了“迫在眉睫”一词，但国会国防部的一份简报告诉国会议员们，俄罗斯可以在72小时内拿下基辅（Kyiv），全面入侵将造成多达5万名乌克兰人伤亡。
+零对冲网2月6日报道，随着中俄两国雄心勃勃发展更强有力的武器包括超音速导弹，可以通过发射至地球大气层后针对地球另一半的目标发起攻击，难怪更多的西方政府正在检查其能力，即在人类的“最终前沿”—-太空方面，不仅是进攻性，也包括防御性。
 
-消息人士告诉《福克斯新闻》记者雅克·海因里希（Jacqui Heinrich），参谋长联席会议主席马克·米利（Mark Milley）将军上周告诉众议院和参议院的简报会，乌克兰首都基辅可能在72小时内被（俄军）攻下，代价是4000名俄罗斯军人和15000名乌克兰军人付出生命。
+由英国国防部本周发布的一项新的报告，权威机构警告说攻击者可能潜在性地发展外太空的核武器，可以导致“民用设施或可能是针对目标的永久性的杀伤性武器”。
 
-在另一份预测（俄军）大规模入侵和5万人伤亡的报告中，一位欧洲官员告诉《华盛顿邮报》（The Washington Post）说：“我们担心的是，你不会把战斗群在另一个国家的边境上两次（集结）却啥也不做。我认为这正是我真正担心的，（普京）现在把兵力集中在那里，即使他还是什么也不做……广大国际社会会作何感想？”
+该报告称到目前为止政府为其公民日常生活所能提供的保护，將有赖于对太空的控制。英国的对手很有可能在未来的战争中很快超越。
 
-一位消息人士告诉海因里希，预期乌克兰人将会逃离，美国和欧洲盟友正在为难民和移民危机整合资源。
+而在“太空优势”方面的维持控制是关键的，危险来自从网络攻击和电磁攻击到外太空的核攻击，例如由卫星制导的核导弹或从太空发射的导弹等。
 
-文章说，目前，有10万到13万名俄罗斯军人在乌克兰边境集结，目前已经达到了全面入侵乌克兰所需（兵力）的70%。
+报告的结论很明确，英国和同盟国必须计划并投资，因为决定性的“太空竞赛”已经开始了。
 
-**新闻来源**
+##### 新闻来源： [UK Military Warns About Risk Of Nuclear Attacks From Space In New Report](https://www.zerohedge.com/geopolitical/uk-military-warns-about-risk-nuclear-attacks-space-new-report)
 
-[Russia Invasion Would Cost 50,000 Ukrainian Casualties Within Days](https://www.newsmax.com/newsfront/invasion-casualties-markmilley-war/2022/02/06/id/1055680/)
+#  
+
+
 
  
 
