--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,57 +1,25 @@
 ---
-title: 单伟建口中的PAG
+title: 三个工作重心 &#124; 新中国联邦力图阻止反华，团结人心，做好教育
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1967281/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1967443/)
 
-撰稿： Grace
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-06-at-2.41.34-PM.jpeg)图片来源：Goldman Sachs
-在郭先生的直播中，我们越来越多地听到郭先生提及单伟建-王歧山的一个白手套-太平联盟（PAG）的CEO。今天，我们一起听听单伟建自己是怎么描述PAG的，看看太平联盟究竟是怎样的一个公司。
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-**拥有足够的现金**
+2月6日，郭文贵先生于GTV、Gettr大直播中公布今年新中国联邦的三个工作重心，并表示，人生做再多正确的决定，若做错一次，有可能一切皆毁。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/bb0bd88f0d3f6f3856a10d3712ebbd29.jpg)图片来源Gettr
 
-2020年10月1日，单伟建在参加一个高盛的采访节目- “Insight from Great Investor”-中提到**PAG****是一个****400****亿美元**的公司， PAG的业务分为**房地产投资**、**期权回报**，其中包括**私人债务**和**公共市场战略**，然后是**私募股权**。**他还强调了自己****几乎把所有的注意力都集中在私募股权收购上。**
 
-**当主持人**艾莉森·马斯（Alison Mass-高盛投资银行部的主席）**问他在**大流行病的早期，2020年1月在中共国是**如何**抓住机会时。单伟建回答说：“我们立即进入资本保全模式。。。而这样做的唯一方法是拥有足够的现金。”
+G系列生态圈是新中国联邦的核心力量，自王者GTV的诞生到Hcoin（喜币）目前500多倍的收益，再到0手续费Hpay（喜支付）的汇通天下，我们已经做的够多够优秀。所以，今年要把已有的项目做好，不再延展其他新的项目，避免无限扩张而引发灾难。这样新中国联邦可以把更多的精力集中在今年最大的挑战——排华问题，如何阻止世界范围的排华浪潮是新中国联邦的首要课题。阻止不了西方世界的排华骚乱，灭共也就失去了原本的意义。
 
-滑稽的是，单伟建没有说明他是如何以及怎么能够在国内“拥有足够的现金”，而且他的这些大量的现金是谁给的。
+第二、要让国内更多的人参与到爆料革命，除了继续做好直播、文宣的工作，还会实施B计划，即让国内音乐界、教育界、军界、情报界、地方政府、企业界等也能得到Hcoin（喜币），未来也能按照使用标准享受到“躺平币”。届时，从东北的山沟到喜马拉雅的山脚，每个人都能闻到Hcoin（喜币）和“躺平币”的味道。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/c9acc3ac59b937e9d8ba81cf013107f5.jpg)图片来源Gettr
 
-**投资的公司几乎都是低负债**
 
-单伟建还说：“幸运的是，**我们所投资的公司几乎都是低负债的，只有很少的债务或没有债务。债务非常少或根本没有债务**。 因此，我们能够削减成本，保存现金，并设法度过危机。”
+由于小学博士习近平自身对真理和人性认知的局限性与掌握最高权力的巨大矛盾，深刻诠释了没有和能力、权力相匹配的教育，任何的成功一定是更大的灾难。
 
-同样滑稽的是，他又没解析他所说的“低负债”中的“低”具体是指一个怎样百分比的负债率。他没能说出具体的负债数字，更没能说出这些被投资的公司的名称，很明显，他所说的“低”的可信度是很低的。
+所以第三、新中国联邦要把新中国人的G-EDU（G教育）做好，这是新中国的未来和希望。具体的激励政策是，凡是原新东方（或同等级别的）员工参与到G-EDU（G教育）的建设，将得到1.5倍原工资待遇，特殊贡献者甚至可以得到2倍原工资待遇，还可以选择用Hcoin（喜币）或者HDO（喜美元）支付工资，有意愿者请速与磐石农场联系。用按小时、按天、按周支付Hcoin（喜币）和HDO（喜美元）的实际行动做到走新东方的路，让新东方无路可走。
 
-另一方面，从刘彦平和郭先生的对话，以及郭先生平常的爆料中，很多人大概地都了解到了普遍的中共国内企业的负债数目都不是小数目，没有债务的企业在中共的体制下基本不可能得以生存。
-
-**不会受到贸易流中断、技术战等的影响**
-
-采访中，单伟建还表示，**PAG**专注于亚洲，只关注所投资的国家的国内和私人消费，特别是在中共国。**PAG**投资的国家包括澳大利亚、印度、日本、韩国、东南亚。
-
-接着，艾莉森·马斯再次问：“如果中美之间的紧张局势加剧，这是否会给PAG作为一个主要的本地私募股权投资者带来竞争优势？”
-
-单伟建直言， PAG“专注于国内消费或满足国内消费的企业”，因此，PAG“不会受到贸易流中断、技术战等的影响”。
-
-虽然单伟建再次地没解析他为什么会有这样的观点，但是，从郭先生的直播中，我们得知大疫情期间，生意最好的地方是医院，墓地，最好卖的商品是药，花圈和骨灰盒，而这些东西确实是不容易受到“受到贸易流中断、技术战等的影响”。
-
-**企业文化**
-
-另外，在该视频中，单伟建还提到他鼓励员工去“了解一切”，不知道这是否包括他会鼓励和帮助员工去了解王健之死的真相？以及鼓励员工去探讨他是怎么作为中共文革后第一批出国留学人员，接受中共的授命，秘密执行各项渗透任务包括千人计划？
-
-**投资合伙人****David Bonderman**
-
-在谈到对刚开始做投资的人有什么建议的时候，单伟建答道：“我很幸运，因为我能够和**大卫****·****邦德曼（****David Bonderman****）**一起工作，他是我非常尊敬的人，他非常有经验，非常聪明，而且他做了很多伟大的交易。”
-
-大卫·邦德曼是TPG资本的联合创始人和主席。据报道，单伟建大约在2000年左右加入TPG资本，担任合伙人长达12年。而接手PAG诉郭文贵先生的官司的Cahill律师事务所参与TPG资本的多个百亿收购的法律事务的期间，也正是单伟建在TPG任职的时间段，随后单伟建到PAG太盟担任集团主席兼行政总裁。
-
-##### 2020年10月1日，单伟建直言他和大卫·邦德曼一起工作，而太平联盟的案子是从2017年4月18日开始。不知道这信息是否会很容易地让读者在太平联盟案子背后看到大卫·邦德曼的身影呢？
-
-#####  
-
-参考链接： [Weijian Shan, Group Chairman and CEO of PAG](https://www.goldmansachs.com/insights/talks-at-gs/weijian-shan-2021.html)
-
-[7·24系列——单伟建、TPG资本与Cahill律师所](https://gnews.org/zh-hans/1878068/)
-
-[揭秘中共间谍单伟健的前世今生](https://gnews.org/zh-hans/1966610/)
+魔鬼在咆哮，苍天在愤怒，G系列在拯救。世界经济和供应链的崩塌，新冠病毒和新冠毒疫苗对全人类的威胁，世界面临大重启，新中国联邦风景独好。
 
  
 
