--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,50 +1,77 @@
 ---
-title: 爆料革命五年最大感受灭共容易让中国人心变好难于登天
+title: 币圈新闻动态：喜币（HCN）价格目前在50.180 HDO
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968295/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1968427/)
 
-G-TV视频链接：[https://gtv.org/video/id=62007b1d585ecc15d73e584f](https://gtv.org/video/id=62007b1d585ecc15d73e584f)
+*喜马拉雅华盛顿DC 编辑：aQ*
 
-**郭文贵先生：**你说这五年，你往回看这感受，你见过咱爆料革命从第一天到今天除了咱们这些战友之外，有几个中国人认为海航是邪恶的？王岐山是邪恶的？孟建柱邪恶？孙力军邪恶？没有人！除了被害者之外！
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/07/ScreenShot-2021-07-31-at-16.20.22@2x.png)
 
-雅各他家被欺负，他是仇恨当头。如果不是，他不认识这人是邪恶的，在中国，因为他没动我，海航也没海航我，王岐山也没“王”我，孟建柱也没“孟”我，我干嘛恨他？就咱中国人那邻居家能死人、被强奸、被轮奸，绝对视若无物。没有比中国人这心再冷的了。没有比中国人这心再冷的了。
 
-这为啥我们说台湾好？为啥我们说香港好？你到香港去，同类，你就能看到香港人，过去罗湖关，我听到最多的，过去这几十年，每个人都说：哎呀文贵呀，过了这个河，咋就天地不同呢？当年去台湾，一飞几个小时到那转悠回来，后来直通以后到台湾，为啥人家台湾的男的女的都看上去那么顺眼呢？不是别的，是人心！中国人的脑子坏了，中国人的人心坏了。
 
-所以咱五年的爆料革命，不是共产党最难，真的是中国的人心！就这个授权撤离，都让七哥都不知道咋好了我都。刚才那个罗西讲了他师父的事情，让人感动。他有师父，中国人哪有求师父的？爹妈都不要了，还要什么师父？中国你见什么师父？师父是利用的，学生也是利用的，谁管你什么师父？没大没小、没老没少、没内没外，一切就是利益，就一切！宗教也是这样，一切都是利益！
+## 每日一问
 
-你今天你把我问在这，问到今天五周年，七哥最感慨的事：灭共容易，想让中国人心变好难上加难！比登天、比登太阳系都难！所以说这是灭了共产党，灭一万回共产党，我也不会回中国活着去。我宁可在，真的在美国当狗，美国人明天就是我在大街上当狗去，我吃着狗粮，最起码我知道它没有化学的。
 
-我觉得除了中南坑，中国人没有一个粮食没有化学的。我在这块儿当狗，我也不会回中国去。还搞什么政治，新中国联邦接管，去吧，你爱谁接管谁接管，剩下内战。你八次内战，跟我都没有关系，我只负责把共产党——我肯定把它灭了。这是发自内心的，我就这么直接。
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-编辑整理：Jacques；
 
-字幕文件制作：大好河山；
+2022年春节过完了，下一年是Lunar New Year，还是Chinese New Year?
 
-视频制作及上传：Cindy；
 
-G-News发布：小满；
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+## 喜马拉雅交易所要闻
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+- 喜交所网站行情显示，喜币（HCN）价格目前在50.180 HDO，24H最高价格为51.500 HDO，24H最低价格为50.180 HDO，24H成交量约为40698.427 HCN。
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
+
+
+
+
+## 新闻动态
+
+
+
+
+
+1. 2月6日消息，根据区块链分析公司Glassnode 2月3日发布的链上周报，虽然比特币市场呈现下跌趋势，但与2019年的小熊市相似，目前非零钱包数量的上升轨迹似乎基本上没有受到过去三个月价格低迷的影响并创下了4016万个地址的历史新高。
+2. 2月6日消息，跨链大宗经纪流动性协议Primex Finance近日完成570万美元种子轮融资，Stratos Technologies和Coin Fund领投。融资资金将用于在Primex今年发布V1之前推进产品开发。
+3. 2月6日，据官方消息，元宇宙多链游戏IGO平台Play Pad与去中心化启动平台Infinity Pad达成合作。
+4. 2月6日消息，IDO平台DAO Launch与Webcoin Capital达成战略合作。双方将在交易流程支持、生态系统增长、项目尽职调查等领域合作。据悉，Webcoin Capital专注于为创新型区块链初创企业提供长期融资和援助。
+5. 2月6日消息，投资机构BCA investments近日宣布，与GameFi沙盒元宇宙Endless Battlefield达成战略合作。BCA investments将投资该项目，并支持其团队达到某些里程碑。
+6. 2月6日消息，以太坊推送服务（EPNS）与NFT市场Digible达成合作，将进行试点项目。Digible用户可以在EPNS上订阅其官方频道，随时接收去中心化推送通知。
+7. Cryptonewmedia报道，印度夫妇Shruti Nair、Anil Narasipuram近日在区块链上举办了一场婚礼，数字牧师Anoop Pakki主持并铸造两人的婚礼誓言NFT。新郎后来将NFT转移到妻子的数字钱包中，该NFT将在以太坊区块链上运行，这笔交易花费35美元的Gas费。据2021年4月报道，两名Coinbase员工在传统犹太婚礼仪式期间，互相赠送了对方一枚基于NFT的虚拟戒指。新娘Rebecca Rose表示，她与丈夫Peter Kacherginsky的虚拟婚戒已经被保存到了区块链上，可让所有人都看到并证明他们的彼此承诺。
+8. 官方消息，去中心化市场Algodex背后的开发公司Algodev,Inc.已被Algonaut Capital Corporation收购，自2022年2月3日起生效。Algodev现在是Algonaut Capital的全资子公司。Algodev和Algodex创始人Alexander Trefonas将担任Algonaut Capital首席技术官，继续开发和推进Algodex平台，并领导Algodev团队。
+9. 2月6日消息，当红说唱歌手TYGA将Instagram头像更换为INNOCENT CATS NFT。据悉，他花费1.4万美元（5枚ETH，约9万人民币）购买该头像并加入INNOCENT CATS的Discord群。包括知名说唱歌手TYGA、天王歌手潘玮柏WillPan、偶像歌手唐禹哲在内的多位明星名人使用INNOCENT CATS的头像作为社交媒体的头像。INNOCENT CATS这些猫头像以ERC-721A标准发布在以太坊网络上。INNOCENT CATS第一场官方AMA将于2月15日开启。
+10. 2月6日消息，基于BSC的AMM和收益农场LeonicornSwap近日发布2022年路线图，具体如下：第一季度：IJO（Launchpad）、智能质押、多链预测产品（基于BSC、Avalanche、Polygon）、NFT市场、多人PVP游戏、NFT质押。第二季度：推荐集成、多链DEX支持、跨链桥、Lootbox、PrideWar。
+11. 2月6日消息，区块链平台Neblio更新2022+路线图，NeblioX升级的开发已经开始。此次升级将为Neblio平台带来许多优化、改进和新功能。
+12. 2月6日消息，The Sandbox宣布，NFT项目Knights of Degen已经获得一个ESTATE，成为其Web3 LAND销售活动的合作伙伴。Knights of Degen是正在Web3中发展体育和娱乐帝国的项目。通过这种合作关系，Knights of Degen正在扩大其元宇宙帝国，并将在其ESTATE上建立Sandbox Kingdom。
+13. 2月6日消息，基于BSC、Fantom的DeFi项目孵化器和launchpad DeFi Launch宣布，将在Avalanche网络上发布其Launchpad。DLAUNCH代币预售将于UTC时间2月13日23点（北京时间2月14日7点）在DeFi Launch（Avalanche版本）进行。
+14. 2月6日消息，投资平台Wavebridge近日宣布，其Chainlink节点已经上线，并在主网上全面运行。其Chainlink节点现在可以为智能合约应用程序提供数字资产市场指数的访问权限，包括CMX10指数、KIMP指数，以及未来的更多指数。开发人员现在可以调用Wavebridge的Chainlink节点来获取各种指数相关的每日/实时加密签名数据。开发者可以构建利用套利机会和实时链上算法交易策略的DApp。与此同时，开发人员可以创建新型的DeFi应用程序和数字资产产品，例如基于加密指数的投资产品和利用Wavebridge的市场指数作为基础指数的预测市场。
+15. 2月6日消息，DeFi借贷协议UniLend Finance宣布，其无需许可的协议将于2月7日推出Moonriver借贷奖励。UniLend V1已在Moonriver上推出，在Kusama网络上提供闪电贷。Uni Lend上的贷方（lender）将获得更多MOVR奖励。
+16. 2月6日消息，区块链Launchpad和投资基金Vulture Peak将在Matic Launch进行IDO。具体时间为UTC时间2月12日8:30-2月13日8:30（北京时间2月12日16:30-2月13日16:30），将总共销售142857.14VPK。
+17. 2月6日消息，Neon Labs近日发文称，Neon EVM即将在Solana主网发布。Neon EVM是Solana区块链的EVM兼容性解决方案。该工具允许在Solana上处理类似以太坊的交易，以便以太坊DApp开发人员利用其对Solidity、开发工具和现有代码库的知识在Solana上进行构建。该平台还将提供一个环境，让现有以太坊项目将其DApp移植到Solana，而无需代码或配置更改。根据其路线图，Neon EVM将在主网上分阶段发布，分别为Pre-Alpha阶段、主网Alpha（许可发布）、主网Beta和主网Gamma。
+18. 官方消息，NFT数据聚合平台NFTGo.io已于今日16时在OpenSea发布首套Annual Report 2022 NFT，限量1000个，发行价0.22ETH。Annual Report 2022 NFT持有者可加入专属Discord频道，下载完整版年报PDF，原始数据CSV文件及年报数据解读服务，并可持续参与后续项目白名单抽奖及空投等活动。可阅读NFT Annual Report（免费版）向公众开放。
+19. 2月6日消息，NFT市场LooksRare发推称，LooksRare网站今日第三次遭受DDoS攻击，官方正努力使网站尽快恢复正常。经查询发现，LooksRare网站目前可以正常访问。
+20. 2月6日消息，欧洲央行管委诺特表示，个人认为在2022年第四季度加息是有可能的。无论何时加息，前两次加息很可能会接踵而至。欧洲央行可能在2023年初进行第二次加息。我们应该尽快结束资产购买。
+21. 2月6日消息，据Defi Llama数据显示，目前DeFi协议总锁仓量2165亿美元，24小时增加1.55%。锁仓资产排名前五分别为Curve（191.4亿美元）、Maker DAO（169.7亿美元）、Convex Finance（133.9亿美元）、AAVE（123.8亿美元）、WBTC（108.8亿美元）。
+22. 2月6日消息，据Defi Llama数据显示，目前Avalanche链上DeFi协议总锁仓量为100.6亿美元，24小时增加2.37%。锁仓资产排名前五分别为AAVE（27亿美元）、Benqi（13.7亿美元）、TraderJoe（13.5亿美元）、Curve（10.3亿美元）、multichan（6.79亿美元）。
+
+
+
+
+
+*编辑：aQ
+发布：文顾*
+
+
+ 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
