--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,45 +1,41 @@
 ---
-title: 今天下午 5 点，所有自由车队卡车和平的撤离了魁北克市中心
+title: 2.06大直播后记：历经中共缠诉，成就七哥法治基金
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1968252/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968363/)
 
-2022-02-06
+**整理编辑：文泓**
 
-作者：16626
-![](https://assets.gnews.org/wp-content/uploads/2022/02/D2AEMGLRNIIJQ3NCNTG.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
-#### 下午 5 点，最后一批自由车队卡车和平地撤离了魁北克市中心
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-621.png)
 
-TVA Nouvelles（2022年2月6日，下午5点46分）发表一篇题为《所有卡车已经撤离了魁北克市中心》的文章报道，今天下午 5 点，在围观的示威者的掌声中，最后一批自由车队卡车和平地撤离了魁北克市中心，自由车队称计划在两周内返回魁北克市。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/@8I_LDVCD1C88G0SFQPC.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
-#### 最后一批停在勒内-莱维斯克大道（boulevard René-Lévesque）上的卡车在围观的示威者的欢呼声中离开了
+图片来源：墨尔本雅典娜农场设计组
 
-魁北克市警察局警告卡车抗议者，下午 5 点（2022年2月6日）后将不再允许车辆通行，那些不离开的卡车将被罚款，甚至被拖走，“以避免（构成）继续违章犯罪”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/O81SPCGAMHI@ROA@AGK.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
-在（2022年2月6日）下午 5 点后不久，在最后一批（围观的）示威者的掌声中，所有卡车都和平地离开了（示威）现场
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WSHBDPZQ25IPKIB1XO.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
-#### “自由车队”在两周内重新返回
 
-然而，魁北克“自由车队”的组织者计划在两周内重新返回，以“给勒戈Legault（做出）让步的时间”，并制作一个以“自由”为主题的“伍德斯托克（伍德斯托克音乐艺术节）”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/04M3JKIEGY8LFFVW.png)图片来源： 截屏于[Rendez-vous dans 2 semaines: quitter pour mieux revenir](https://www.tvanouvelles.ca/2022/02/06/rendez-vous-dans-2-semaines-bernard-rambo-gauthier-demande-aux-manifestants-de-quitter)图中显示伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）在演讲
-“我们今晚就走，但我们会在两星期后回来[…]。你有 15 天的时间来准备 […]，（回来时）我们会有更多的人”，伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）周五下午（2022年2月4日）这样说。
+当时，最大的老板海航王健都死个球的了，你说这5年发生了多少事情？然后，现在共产党你再说那3号、5号文件，我告诉你，亨利小哥，我这些事情美国政府分之百清楚，那个司法部（官员）黑根巴森已被黑掉了，吴征化了8000万现金，埃利博迪、斯蒂芬·温，所有华尔街大佬们给中共游说（遣返）七哥。哪一个放你们身上，那怕1.001，我保证，亨利小哥，（就像）你跳到夏威夷海里面去，别看你强壮，你是活不了了。
 
-另外，Gnews（2022 年 2 月 5 ）发表一篇题为《[自由车队：在新平台上筹集的资金已超过90万元](https://gnews.org/zh-hans/1963141/)》的文章报道，在 GoFundMe 拒绝向全国各地示威反对强制接种疫苗的卡车司机支付筹集的资金后，他们（卡车司机）转向另一个平台，而且已经筹集了近 100 万元。
+我118次做证（deposition），每次都在14至15个小时。或者你可以试试，如果你想跟小新一起扛过（新冠）病毒，小新绝对2天就把你“撂倒”，你绝对有想自杀的心。（因为）你不到现场你不知道。
 
-## 请读者学习2月6号郭先生Gettre视频
+当初，就是我第一次告那个大卫律师的时候，我根本不懂美国法律啊，咱还以为在中国呢？上去人家对方一问，反正法官没在现场，咱就是敞开了嘴，随便说是吧？人家问一，我就来因为、但是，所以（一番解释）啊，而且还经过翻译，律师提前还告诉我说，你要让法官喜欢你，叫仲裁的那个（法官）喜欢你，（你）还要装作很弱势，就差咬舌头了啊。然后，身体出汗、说话很小声，最后的结果是（在法庭上）完全丢人现眼。
 
-2月6号郭先生发表了题为《[尊敬的战友们好！关于如何使用GTV帮助加拿大卡车反疫苗运动的几点声明！](https://gettr.com/post/pswoyr9fbf)》的Gettre视频。
+在法庭上最怕说，因为、所以、但是，**你的答案就是，是、不是、不记得**，就这3句话。人家说1，你最好说0.1。咱们中国人，因为、所以、但是（语境），（在法庭上）把自己给毁了。
 
-这次卡车司机的行动背后的政治博弈非常激烈。请读者，特别是身处北美的战友，记住，新中国联邦人是有信仰，有底线的，一定要坚持，为真不破，报道真相，不煽动或鼓励暴力。相信郭先生完全有能力和智慧以和平方式消灭世界的一切不公平。欢迎读者访问并在“[加拿大温哥华圆成农场](https://gettr.com/user/himalayavang)”上留言。
+但是，七哥牛就牛在，明知山有虎，偏向虎山行，是吧？郭宝胜、夏业良案我坚持要都上庭。咱律师说，你没有任何可能赢，（因为）陪审团一看，一个百万富翁（与普通人打官司），一个有钱人来了，看你长这样，肯定判你输。最后我赢了！我说，我就算输，我也一定要学习。
 
-参考链接：
-[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+**我要知道美国的法律，我们要搞法治基金，我们要以法灭共后成立一个法治的中国。**没想到，**我得感谢郭宝胜、夏业良，经历所有这一系列的案子，也成就了我。**现在我不敢说，律师牌照是考不了，但我当半个律师绝对没问题。就好几个国际官司上，律师说，Miles，你给我们讲讲你这个上庭，还有被作证的事情，我们一小时付你1万美元，比律师（收费）都贵。我说，我没有心情拿你1万美元跟你讲这个所谓上庭的经验。包括两个骗子的案子在法庭上你看看七哥的表现。很多律师回来说，嗯，还行吧。我说一定会赢，我有把握一定赢。（当时）没有一个律师相信我们会赢。那两个骗子对我们的攻击，那个流氓那个嘴脸，他们找的这个律师事务所也是吴征付的钱，就是美国司法部副部长律师事务所。那个律师那个流氓性，哇塞！简直是胡扯八蛋到了极点了。你看，七哥怎么跟他对付的，光那个案子耗费掉的精力，任何人受不了。他全输了。
 
-编辑：LILY
-发布：肥鯮
+你们想过吗？兄弟姐妹们？所以说，现在，**我了解了美国的司法制度、它的行政制度、它的立法制度，以及参议员制度之后，这个国家真的是太伟大。**但是，另外的一面的官僚，实在是美国所有问题的根本所在。这个国家法律，它最牛的是独立的立法和独立的司法执行系统。**但是，法律是建立在有信仰的社会上它管用，一旦没有信仰，它完全一点用都没有了。**就好比用麻绳绑黄牛，是在黄牛不挣扎的情况下，麻绳绑黄牛管用；如果黄牛挣扎了，这个绳是挡不住它的。就是说，法律道德是在有信仰的社会是完全管用的，如果没有信仰就完了。美国是信仰立国的基督教国家。现在西方由于大量的新移民来自不同国家，特别共产党这帮孙子来了以后，在美国大量地摧毁了作为美国立法基础的信仰。一个96%人口有信仰的国家，人民在逐渐怀疑这种信仰，这就麻烦了。
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
+所以，现在资本主义带来的腐败结果，导致官僚主义和腐败的结合。就这三份文件拿出来，它也不见得有什么效果，它最终要等待着付出惨重的代价啊，它才能最终纠偏！这是西方输给中共国最根本的原因。资本主义，这个重商主义，还有这个金钱至上导致信仰丢失，把自己的法律的系统彻底给摧毁。最后付出代价以后再来纠偏，这就是现在正在发生的。所以，美国要靠哪一个人去挡住中共这列必将倾覆的火车，希望很渺小（亟待整个社会的觉醒）。
+
+资料来源：郭先生GTV、盖特直播
+
+*发布： 盘古相聚*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
