--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,50 +1,27 @@
 ---
-title: 没有比共产党在中国人心里种下的假丑骗恶毒瘤再可怕的
+title: 以色列逐渐废除疫苗护照
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968249/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968308/)
 
-G-TV视频链接：[https://gtv.org/video/id=62007a29585ecc15d73e5805](https://gtv.org/video/id=62007a29585ecc15d73e5805)
+撰稿：东京樱花团/立正道
 
-**郭文贵先生：**所以说在我们生活中我特别建议战友今天一开始，不要因为别人曾经是什么你就决定别人的未来。不要因为你看到了太多的恶臭和黑暗，你认为一切都是黑暗的。不要因为你没见过什么，所有出现你没见过、你没有听说过的，你都认为是不真实的、不应该存在的。大惊小怪、恐天下不乱、看不得人家好、不相信真的只相信假的。因为假的让你爽啊，导致中国一切吃的、喝的、天气、人语都是假的，
+![](https://assets.gnews.org/wp-content/uploads/2022/02/以色列逐渐废除疫苗护照.png)图片来源于本文视频截图
 
-这5年来，七哥尝尽了人间的这种酸甜苦辣，几十年我真正地让我一个人去尝中国这些年留下的这种假、丑、骗、恶的这种毒，感触太深了！如果我身上、我的精神上留下各种人身的伤害的这种、你找到这种时间的痕迹的话，都是共产党给中国人这种文化给留下来的。我没有觉得共产党是什么多可怕，我觉得没有比中国人这个人心现在是再可怕的了。
+随着中共病毒（新冠病毒Covid-19）感染人数的下降，以色列放宽规定，许多地方不再需要出示疫苗接种证明。
 
-就是你去看看九指妖这样的女人，给人家写遗书，然后给人家弄上帝，是吧，然后呢带着儿子跟人家搞恋爱，能把钱给花到德州去买房子，然后还天天在那儿搞直播。路大脑袋连个饭都没得吃，路大脑袋天天给人类上来画圈圈，邓小平到深圳画了个圈儿，他给全地球画圈儿，是吧？你想想那个蛇妖能在香港就这么一个家伙，你坐着几十万的飞机票救出来，突然跟你翻脸，然后就把你打入九层地狱去，弄死你不拉求倒，然后跟她素未见过的塞林爹就比她亲爹亲娘还亲。
+在以色列，从7日起，在餐厅、电影院、健身房、酒店等场所，不再需要出示“绿色通行证”的疫苗接种证明。尽管一些室内集会活动场所和俱乐部仍然需要“绿色疫苗护照”，但将取消对户外聚会和商业设施人数的限制以及对餐厅餐桌间距的限制。
 
-就在中国人这种骨子里面崇洋、媚外，然后嘴巴上喊着就是外国人一切该死，美帝国主义怎么着我们。事实你去看我们中国人，谁不想来美国呀！他来不了美国，他就羡慕妒忌恨：我不能去的地方都不是好地方，我们不能去美国、英国，你们去美国、英国那能是好地方吗？小王子、佳佳他家人，你问他家人去、问他家亲戚，我可以保证，百分之九十以上的人说：欸，美国有什么了不起的，美帝国主义，天天死人，那海边上天天漂的都是尸体，你们都没有粮食吃，哎哟美帝国主义很现实。
+卫生部解释说，感染高峰正在过去，即使接种过疫苗的人也会感染Omicron毒株，因此已经失去了监管的有效性。
 
-他不是说都怨共产党，中国这个人心他容不得别人好。我当年去台湾我就感受台湾人为啥可爱呀：“你从哪儿来的。”我说：“我是从郑州来的。”“郑州是啥地方啊？”问问，没问题。你在国内，是不是，你到南方：“你哪儿来的？”“我哈尔滨来的，”“哎哟，哈尔滨啊，漂亮城市。”“你哪儿来的？”我说：“山东农村，”“山东农村啊？农村啊？”没比中国农民再看不起中国农民的了。这个世界上没有比我们中国人这样的了，……就分人的上下九等、以物观人、以装观人。
+在以色列，上月底每天新增感染人数超过8.3万人，但最近已降至3.3万人左右。
 
-所以中国人就吹牛，哪来的？天上来的！你爹是什么部级？我爹是天部级！你爹是什么？副主席，什么主席？什么村儿，什么村儿什么妇女协会副主席。我爹那什么省主席。吹着吹着就大，羡慕妒忌恨，看不到人家好，根本不相信什么真的东西。
+信息来源：
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+[イスラエル　レストランなどワクチン接種証明不要に](https://news.tv-asahi.co.jp/news_international/articles/000244027.html)
 
-编辑整理：Jacques；
-
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
