--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,25 @@
 ---
-title: 中共安排维族运动员传递奥运圣火作秀 遭美国猛批
+title: 七哥谈中共和哈萨克斯坦（一）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968244/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968304/)
 
-撰稿：东京樱花团/asket
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中共安排维族运动员传递奥运圣火作秀-遭美国猛批.png)
+我谢谢青青草原，国内很多战友都跟我说，看到了青青草原，他说真的是哈萨克族在新疆是很重要的，而且是文化的这个中心啊。那么共产党在这个哈萨克斯坦，纳扎尔巴耶夫在伦敦的房子非常非常的漂亮，非常有品位。哈萨克族的人，就像青青草原这个脸一样，他们特色很明显。就是有伊朗，那个波斯人的那种品位啊。你看到世界时尚很多人，你看我穿的衣服的美，LOUISANA（路易皮安纳）还有做这个爱马仕，平安的媳妇，所有的人几乎都是伊朗犹太人啊。还有搞古董的，记录的伊朗犹太人，那么伊朗波斯文化和中东文化，包括整个一带一路到哈萨克斯坦，整个这过去，新疆哈萨克族和新疆维族。还有土耳其，它都是连在一起的，这是一个文化的一个主脉络啊，而且历史很悠久。
 
-[图片来源](https://www.sohu.com/a/520617568_260616)
+共产党，整个真的是你想象不到，他现在竟然想着操控这一切事情，你想想，王毅去了阿富汗，阿富汗就就变成那样了。现在每天要饿死上百人，我每天醒来时候都会为他们祈福。然后你看到了，到了哈萨克斯坦，直接是不是就完了，就成这了啊。但是你要看到，无论是萨达姆，还是乌干达的阿明还是苏哈托，还是当年的日本天皇，包括希特勒把毛泽东，斯大林所有的过去，就是把国家变成家天下，就是他家族的几个人的。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（一）-1-1.jpg)
+2022年1月7日文贵大直播
 
-据法新社2月6日报道，因新疆的人权受到侵犯，美国及其一些盟国选择在外交上抵制中国北京冬奥会。为了回应对新疆人权的批评，中共特意安排一名维吾尔族运动员参与北京冬奥会开幕式火炬传递进行作秀。
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-新疆是越野滑雪运动员20岁的迪尼热-依拉木江的出生地，她与中国另一位运动员赵嘉文是开幕式上最后一名火炬手。迪尼热-依拉木江来自新疆北部的阿勒泰，这个山区是中共声称发明滑雪运动的地方。
-
-据美国大使周日在美国有线电视新闻网(CNN)上说：“这是中国当局试图转移我们对真正问题的注意力，即维吾尔人正在遭受酷刑，维吾尔人正在遭受中国的虐待，我们需要把这个问题放在首要关注位置。”
-
-据美国驻联合国大使琳达.托马斯.格林菲尔德称，“我们知道那裡发生了种族灭绝，”琳达-托马斯-格林菲尔德批评说，”我们已经谴责了它，总统（乔-拜登）也做了谴责。” 据格林菲尔德说，”我们已经明确表示，中国正在明知故犯地实施这些反人类罪行。”当被问及将就人权问题发言的美国运动员在当地的安全问题时，她说她 “希望中国不会对他们採取任何行动”。”格林菲尔德补充说：“我们的目标是确保我们的运动员安全，我们正在尽一切努力来做到这一点。”
-
-信息来源：
-
-[美國批評中國讓新疆運動員最後一棒傳遞奧運聖火](https://www.rfi.fr/tw/%E4%B8%AD%E5%9C%8B/20220206-%E7%BE%8E%E5%9C%8B%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%AE%93%E6%96%B0%E7%96%86%E9%81%8B%E5%8B%95%E5%93%A1%E6%9C%80%E5%BE%8C%E4%B8%80%E6%A3%92%E5%82%B3%E9%81%9E%E5%A5%A7%E9%81%8B%E8%81%96%E7%81%AB)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
