--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,31 +1,32 @@
 ---
-title: 七哥谈中共和哈萨克斯坦（三）
+title: 近三千名维州学生在开学第一周新冠检测呈阳性
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968216/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968251/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-12.png)图片来自网络
+澳大利亚媒体《ABC News》近日报道，在维多利亚州学校开学的第一周，超过 2900 名学生和 400 多名教师的中共病毒检测呈阳性。
 
-在他们心里边儿，夏威夷就是海南，而且在北京有房子，上海有房子。这个国家完全腐败，共产党利用这种蓝金黄，把整个的东欧这几个国家全部给控制了。
+“我们看到“新冠检测呈阳性”的学龄人群有所增加，”马特森女士（澳大利亚卫生部副部长）说。
 
-所以当你江家王岐山，你都要陈锋有多牛，我在那儿，他们竟然问我，哎，你认识陈锋吗？陈老板吗？我，我很惊讶。他说，我们这块儿的大人物啊当时是谁呀？陈锋、王健，人才不，他们不但要马云的啊，都是江家王岐山派康典、田国立、田惠宇，又我一说，这都是岐山派啊。
+“这并不意外。”
 
-那个房间之大，大概700-800平方米。上面的大灯，那种夸张的风格，那种翡翠绿啊，那个屋顶啊，灯花又闪，旁边人跳着舞，这个吃的一大长桌五六米，桌子上摆着各种肉，各种酒。他说，这都是中国的朋友来独享的。我说完了，这个国家彻底完了。
+政府“强烈建议”主流学校的教师和学生每周做两次快速抗原检测（RAT）、特别教学场合每天一次快速抗原检测。
 
-所以说兄弟姐妹，今天你看到哈萨克啊，他不是今天，他是一个中俄之间共产主义蔓延，共产主义统治全世界必然发生的结果。
+这些病例中，许多都是在上述快速抗原检测中测出来的。
 
-这个哈萨克的纳扎尔巴耶夫和他女儿阿莉婭呢，一定最后和罗马尼亚齐奥塞斯库一样的结果。我今天可以在这儿说个没有任何人知道咱们我说的这个东西，没有人知道就是王毅去了，最后给了美帝国主义了，发现了嘛，俄罗斯成功推给美帝国主义了吧，黄金的事情就更没人知道了。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（三）-.jpg)
-2022年1月7日文贵大直播
+目前约有 110 万学生就读于维多利亚州的学校。
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+尽管感染人数激增，但没有学校关闭，接触者追踪旨在保持教室开放。
 
+马特森女士说，随着人们在社区内活动的增加，该部门预计病例数将保持在目前的水平。
+
+快速抗原检测（RAT）的检测结果并不准确，而且还有很多人选择不做检测。所以真实准确的确诊数字一定数倍于官方报道的数据，政府预计病例数能够保持在目前的水平完全是自欺欺人。这是一个特殊时期，建议各位家长让自己的孩子呆在家中自主学习，千万不要去学校，一旦孩子不慎感染则悔之晚矣！
+
+参考链接：
+
+[https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284](https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
