--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,28 +1,23 @@
 ---
-title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
+title: 立陶宛外长今访澳 坚称不会更名台湾代表处
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968214/)
 
-#### 撰稿：彩虹       
+撰稿：东京樱花团/asket
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-617.png)[图片来源](https://newsline.news/gabrielius-landsbergis-minister-towards-authoritarian-regimes/)
+立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
-2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
+立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
 
-威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
+据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
 
-他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
+对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
 
-施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
+信息源：[立陶宛外長今訪澳-堅稱台灣代表處不更名](https://www.rfi.fr/tw/%E6%AD%90%E6%B4%B2/20220206-%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7%E4%BB%8A%E8%A8%AA%E6%BE%B3-%E5%A0%85%E7%A8%B1%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E4%B8%8D%E6%9B%B4%E5%90%8D)
 
-据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
-
-根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
-
-**新闻来源**
-
-[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
