--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,41 +1,16 @@
 ---
-title: 2.06大直播后记：历经中共缠诉，成就七哥法治基金
+title: 甜蜜蜜运动使中共冬奥会成冬眠会
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968363/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968488/)
 
-**整理编辑：文泓**
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-621.png)
+2月2日，郭文贵先生在GTV大直播透露，新中国联邦的甜蜜蜜运动，与中共较量的第一回合是美国外交撤馆；第二回合是《甜蜜蜜》、《一帘幽梦》、《我爱你塞北的雪》三首灭共歌声的全球环绕；第三回合就是对着冬奥会去的！就是要把中共冬奥会变成冬眠会。
 
-图片来源：墨尔本雅典娜农场设计组
-
-
-当时，最大的老板海航王健都死个球的了，你说这5年发生了多少事情？然后，现在共产党你再说那3号、5号文件，我告诉你，亨利小哥，我这些事情美国政府分之百清楚，那个司法部（官员）黑根巴森已被黑掉了，吴征化了8000万现金，埃利博迪、斯蒂芬·温，所有华尔街大佬们给中共游说（遣返）七哥。哪一个放你们身上，那怕1.001，我保证，亨利小哥，（就像）你跳到夏威夷海里面去，别看你强壮，你是活不了了。
-
-我118次做证（deposition），每次都在14至15个小时。或者你可以试试，如果你想跟小新一起扛过（新冠）病毒，小新绝对2天就把你“撂倒”，你绝对有想自杀的心。（因为）你不到现场你不知道。
-
-当初，就是我第一次告那个大卫律师的时候，我根本不懂美国法律啊，咱还以为在中国呢？上去人家对方一问，反正法官没在现场，咱就是敞开了嘴，随便说是吧？人家问一，我就来因为、但是，所以（一番解释）啊，而且还经过翻译，律师提前还告诉我说，你要让法官喜欢你，叫仲裁的那个（法官）喜欢你，（你）还要装作很弱势，就差咬舌头了啊。然后，身体出汗、说话很小声，最后的结果是（在法庭上）完全丢人现眼。
-
-在法庭上最怕说，因为、所以、但是，**你的答案就是，是、不是、不记得**，就这3句话。人家说1，你最好说0.1。咱们中国人，因为、所以、但是（语境），（在法庭上）把自己给毁了。
-
-但是，七哥牛就牛在，明知山有虎，偏向虎山行，是吧？郭宝胜、夏业良案我坚持要都上庭。咱律师说，你没有任何可能赢，（因为）陪审团一看，一个百万富翁（与普通人打官司），一个有钱人来了，看你长这样，肯定判你输。最后我赢了！我说，我就算输，我也一定要学习。
-
-**我要知道美国的法律，我们要搞法治基金，我们要以法灭共后成立一个法治的中国。**没想到，**我得感谢郭宝胜、夏业良，经历所有这一系列的案子，也成就了我。**现在我不敢说，律师牌照是考不了，但我当半个律师绝对没问题。就好几个国际官司上，律师说，Miles，你给我们讲讲你这个上庭，还有被作证的事情，我们一小时付你1万美元，比律师（收费）都贵。我说，我没有心情拿你1万美元跟你讲这个所谓上庭的经验。包括两个骗子的案子在法庭上你看看七哥的表现。很多律师回来说，嗯，还行吧。我说一定会赢，我有把握一定赢。（当时）没有一个律师相信我们会赢。那两个骗子对我们的攻击，那个流氓那个嘴脸，他们找的这个律师事务所也是吴征付的钱，就是美国司法部副部长律师事务所。那个律师那个流氓性，哇塞！简直是胡扯八蛋到了极点了。你看，七哥怎么跟他对付的，光那个案子耗费掉的精力，任何人受不了。他全输了。
-
-你们想过吗？兄弟姐妹们？所以说，现在，**我了解了美国的司法制度、它的行政制度、它的立法制度，以及参议员制度之后，这个国家真的是太伟大。**但是，另外的一面的官僚，实在是美国所有问题的根本所在。这个国家法律，它最牛的是独立的立法和独立的司法执行系统。**但是，法律是建立在有信仰的社会上它管用，一旦没有信仰，它完全一点用都没有了。**就好比用麻绳绑黄牛，是在黄牛不挣扎的情况下，麻绳绑黄牛管用；如果黄牛挣扎了，这个绳是挡不住它的。就是说，法律道德是在有信仰的社会是完全管用的，如果没有信仰就完了。美国是信仰立国的基督教国家。现在西方由于大量的新移民来自不同国家，特别共产党这帮孙子来了以后，在美国大量地摧毁了作为美国立法基础的信仰。一个96%人口有信仰的国家，人民在逐渐怀疑这种信仰，这就麻烦了。
-
-所以，现在资本主义带来的腐败结果，导致官僚主义和腐败的结合。就这三份文件拿出来，它也不见得有什么效果，它最终要等待着付出惨重的代价啊，它才能最终纠偏！这是西方输给中共国最根本的原因。资本主义，这个重商主义，还有这个金钱至上导致信仰丢失，把自己的法律的系统彻底给摧毁。最后付出代价以后再来纠偏，这就是现在正在发生的。所以，美国要靠哪一个人去挡住中共这列必将倾覆的火车，希望很渺小（亟待整个社会的觉醒）。
-
-资料来源：郭先生GTV、盖特直播
-
-*发布： 盘古相聚*
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
