--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,25 +1,25 @@
 ---
-title: 三个工作重心 &#124; 新中国联邦力图阻止反华，团结人心，做好教育
+title: 俄罗斯入侵将在几天内造成5万名乌克兰人伤亡
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1967443/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968048/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+#### 撰稿：彩虹       
 
-2月6日，郭文贵先生于GTV、Gettr大直播中公布今年新中国联邦的三个工作重心，并表示，人生做再多正确的决定，若做错一次，有可能一切皆毁。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/bb0bd88f0d3f6f3856a10d3712ebbd29.jpg)图片来源Gettr
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-613.png)图片来源：波士顿先驱报
+2月6日，《新闻极限》报道，虽然拜登政府在其关于俄罗斯可能入侵乌克兰的信息传递中放弃了“迫在眉睫”一词，但国会国防部的一份简报告诉国会议员们，俄罗斯可以在72小时内拿下基辅（Kyiv），全面入侵将造成多达5万名乌克兰人伤亡。
 
+消息人士告诉《福克斯新闻》记者雅克·海因里希（Jacqui Heinrich），参谋长联席会议主席马克·米利（Mark Milley）将军上周告诉众议院和参议院的简报会，乌克兰首都基辅可能在72小时内被（俄军）攻下，代价是4000名俄罗斯军人和15000名乌克兰军人付出生命。
 
-G系列生态圈是新中国联邦的核心力量，自王者GTV的诞生到Hcoin（喜币）目前500多倍的收益，再到0手续费Hpay（喜支付）的汇通天下，我们已经做的够多够优秀。所以，今年要把已有的项目做好，不再延展其他新的项目，避免无限扩张而引发灾难。这样新中国联邦可以把更多的精力集中在今年最大的挑战——排华问题，如何阻止世界范围的排华浪潮是新中国联邦的首要课题。阻止不了西方世界的排华骚乱，灭共也就失去了原本的意义。
+在另一份预测（俄军）大规模入侵和5万人伤亡的报告中，一位欧洲官员告诉《华盛顿邮报》（The Washington Post）说：“我们担心的是，你不会把战斗群在另一个国家的边境上两次（集结）却啥也不做。我认为这正是我真正担心的，（普京）现在把兵力集中在那里，即使他还是什么也不做……广大国际社会会作何感想？”
 
-第二、要让国内更多的人参与到爆料革命，除了继续做好直播、文宣的工作，还会实施B计划，即让国内音乐界、教育界、军界、情报界、地方政府、企业界等也能得到Hcoin（喜币），未来也能按照使用标准享受到“躺平币”。届时，从东北的山沟到喜马拉雅的山脚，每个人都能闻到Hcoin（喜币）和“躺平币”的味道。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/c9acc3ac59b937e9d8ba81cf013107f5.jpg)图片来源Gettr
+一位消息人士告诉海因里希，预期乌克兰人将会逃离，美国和欧洲盟友正在为难民和移民危机整合资源。
 
+文章说，目前，有10万到13万名俄罗斯军人在乌克兰边境集结，目前已经达到了全面入侵乌克兰所需（兵力）的70%。
 
-由于小学博士习近平自身对真理和人性认知的局限性与掌握最高权力的巨大矛盾，深刻诠释了没有和能力、权力相匹配的教育，任何的成功一定是更大的灾难。
+**新闻来源**
 
-所以第三、新中国联邦要把新中国人的G-EDU（G教育）做好，这是新中国的未来和希望。具体的激励政策是，凡是原新东方（或同等级别的）员工参与到G-EDU（G教育）的建设，将得到1.5倍原工资待遇，特殊贡献者甚至可以得到2倍原工资待遇，还可以选择用Hcoin（喜币）或者HDO（喜美元）支付工资，有意愿者请速与磐石农场联系。用按小时、按天、按周支付Hcoin（喜币）和HDO（喜美元）的实际行动做到走新东方的路，让新东方无路可走。
-
-魔鬼在咆哮，苍天在愤怒，G系列在拯救。世界经济和供应链的崩塌，新冠病毒和新冠毒疫苗对全人类的威胁，世界面临大重启，新中国联邦风景独好。
+[Russia Invasion Would Cost 50,000 Ukrainian Casualties Within Days](https://www.newsmax.com/newsfront/invasion-casualties-markmilley-war/2022/02/06/id/1055680/)
 
  
 
