--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,24 +1,16 @@
 ---
-title: 2.6大直播后记：未来活下去才是一切
+title: 强制疫苗什么时候会停止呢？
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968317/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968474/)
 
-**整理：Rianna**
-**编辑：Sadhu**
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-620.png)
+我觉得现在已经12月了，我也觉得本来这个12月底以前，咱们已经1月了，我觉得是很有希望了。现在看到了实际上很多国家已经结束了，像日本基本上已经是完全结束了，你要看到很多国家在2个月以前制定的强制计划几乎都停了，包括澳大利亚那么凶猛，它也没有推行下去，加拿大也没推行下去，美国也没有推行下去，你一定要看到绝大多数国家所在2个月以前，5个月前执行的政策，几乎60%-70%，没有执行下去。特别照顾强制俩字儿，它没有得到落实。包括你在的地方，是吧？它只是威胁变相，强制这个字政府已经承担不了，基本是已经消失。大家一定要看到，这就是你要和自己的良知和勇气永远作战的结果。如果你不相信，那你就去试吧，很简单，而且我相信5月份以前基本上法定，现在只是法定上让不让你，因为美国现在还在探讨呢，是不是让你强制不强制，你强制的结果就是把你按在地上，你再强制，不问了就是你都有选择，美国的失业率，美国的整个离职率已经证明给你了，我用我的决心证明我不被你强制。所以说我觉得强制疫苗在5月份以前一定会消失，我深信不疑，而且我认为现在是最后的疯狂。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/强制疫苗什么时候会停止呢？-.jpg)
+2022年1月7日文贵大直播
 
-图片来源：墨尔本雅典娜农场设计组
-
-
-未来能活下来，能继续活下去，或者继续健康地活下去，你就是赢家。 这是你人生的一场绝对的马拉松， 一次错全错！你这打了疫苗，只要你打了疫苗，你就等着吧！恐惧和死亡，疾病就会伴随着你的一生，没有任何你过去的事，再说什么都没有用，而且不分高低，不分男女。 另外一个就是，当你染上了病毒，如果你还不珍惜，你不吃药，那这个病毒在你身体里绝对不会彻底除去，一定会让你痛苦万分，甚至付出生命。 最后要看到就是加拿大的土豆，大卡车事件等，还有全世界的农民抗议事件，这七哥在一年前16个月前的时候说，疫苗次生灾难，疫苗造成的政治危机军事危机技术危机贸易危机经济金融危机会席卷全球，而且是从今年的5月份开始。 记住，七哥是从2020年初，1，2月份就说过。 我不是神仙，我不能预测，就是我知道共产党的计划和计划的具体细节和基本的掌握的情报，是我得出的结果。 所以说，战友们当看到美国经济战的时候，你们要想一想，我们未来到底该怎么来？面对着这个2022年水虎年。这个，郝海东兄弟启动了水年，今年就是水虎年，上来就流水啊！水虎年对每个人的挑战。 你问问小新，她在没有得病毒之前和小新得了病毒以后的感受是啥样？ 我半夜醒来，我先看一下新信息，我就怕收到了小新就像当年飞飞一样。 哇塞，一旦要有啥，那真的我也受不了，因为咱们已经成兄弟姐妹，像一家人一样，这种关心是控制不住的！就你没办法想，就是你就怕，你听着小新好了，哎呀，这心里就踏实了，就觉得特别舒服啊，就就像天上就像多了个太阳一样！你要想到，就怕小新说我不行了，就是，就像你都活不了了这个！小新最有感受，我们每个人的面临这样的威胁，当你有病，你会孤独的在一个房子里边，你多需要一个温柔的手，来帮帮你，多需要有一个热乎乎的饭。 可是你知道每个人面对威胁的时候你还有心情搞金融搞经济吗？ 就像小新那会儿，老娘就想活着，你们扯什么蛋，搞什么经济啊。没有健康，没有未来，怎么会有爱，怎么会有经济？ 说到这时候，你觉得美国经济会好，世界经济会好， 能好吗？所以， 最后的结论，经济的崩塌，人类面对着健康恐惧的威胁，世界的整个贸易供应链大崩溃，最后都会找共产党算账。 我告诉你们，你可以看到冬奥会开幕式上，你会看到的未来，比齐奥塞斯库还要惨的夫妇俩， 就是整个台上习和他旁边这些个人， 哪个人都会比他们惨。 你们没有感觉，七哥很有感觉，就是内部那些参加冬奥会的，现在正在服务的所谓义工们。 那些恨那些恼怒那些没办法。 绑在手上的镣，强迫着做义工。 我真感觉大地在颤抖，苍天在愤怒，魔鬼在呼啸。 人类到了一个大重启的时候。 邪恶必将被消灭。 经济是世界更迭的必然发生的事情。
-
-今天直播你在这里看着，再过5月份以后，就像小新在病前病后。 她完全变了一个人。她对生命对爱对人性只有她自己知道。 你活着你是人，你是男是女；你死了，是男是女长好看不好看，年不年轻毛关系没有。 就是一堆灰。 对待人类的经济和未来就这么简单，一样的。 你有这个经济基础就有，没有你想装装不出来。共产党还能再回到以前吗？不可能的。昨天晚上有那个某将军跟我说，他说如果他们下令让我打台湾开始，他说我们是第一波，他说我第一波干的事情我就尽我所能，我把这炮弹导弹我都扔到北京去了。我说，哥们儿，你要这么干了，你就是人类的英雄啊！我说你死了七哥也会让你成为英雄，你活着七哥让你享受终生，哈哈，是吧？他就是因为看咱新中国联邦。 他说我们要打台湾是为啥，我最后研究了研究，就是一帮疯子要打台湾。 就这么简单道理。
-
-这就是新中国联邦直播的力量，让你找到事情的真相，找到事情的真正的真理，不被人家利用，还能有一个安全健康的未来。
-
-*发布：盘古相聚*
-
+*发布：tianzhihuan*
 更多资讯，请关注：
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
