--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,15 +1,15 @@
 ---
-title: 有声&#124;甜蜜蜜运动的三个回合
+title: 有声&#124;欧盟提议将疫苗护照延长至明年6月底
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966773/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966775/)
 
-配音：香草山教育部 – Rose
+配音：香草山巡管部 – 格格
 ![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-在2月2日的大直播中，郭文贵先生谈到甜蜜蜜灭共运动的三个回合。 第一个回合是美国大使馆的授权撤离。第二个回合，就是今年的三首灭共歌曲，即《甜蜜蜜》、《一帘幽梦》和《塞北的雪》。第三个回合就是对着中共的冬奥会去的。郭先生在直播中宣布，他现在正式向中共高层发出战书，要把中共的冬奥会，变成冬眠会。郭先生说，明人不做暗事，他从来不使用背后的阴招。虽然共产党通过黑客技术黑了郭先生的手机，但是却无法挡住甜蜜蜜运动的强势展开。
+欧盟委员会认为，延长该条例将确保旅行者在成员国旅行时，可以继续使用他们的欧盟疫苗护照。司法事务专员雷恩德说，由于疫苗护照版本的不同，已经在不同的国家系统中造成混乱和障碍。因此，统一标准的欧盟疫苗护照是必要的，可以保证公共安全和自由旅行。
 
-郭先生说，他的第三个回合，一定会把中共冬奥会打残，打成冬眠会。因为没有任何人比他更了解中共冬奥会的来龙去脉，尤其是它的选址及其致命弱点。虽然中共有230万所谓的人工造雪弹，但是郭先生绝对有办法让它们无法达到目的。
+此消息迅速引发欧盟区域的强烈反响。评论人士嘲讽，凭一个二维码就可以确保安全，这是极其荒谬的。当欧盟成员国已经意识到疫苗并未在中共病毒的防感染防传播上起到预防的效果，而纷纷取消全部或绝大多数限制措施之时，欧盟还在推行疫苗护照，实在让人感到不解和愤怒。
 
-文字版原文：[甜蜜蜜运动的三个回合](https://gnews.org/zh-hans/1965073/)
+文字版原文：[欧盟提议将疫苗护照延长至明年6月底](https://gnews.org/zh-hans/1956579/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
