--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,27 +1,18 @@
 ---
-title: 以色列逐渐废除疫苗护照
+title: HPay的上线战友们要做三件事
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968308/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968433/)
 
-撰稿：东京樱花团/立正道
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/以色列逐渐废除疫苗护照.png)图片来源于本文视频截图
+2月2日，郭文贵先生在GTV大直播透露，喜支付H-Pay正式上线之际，战友们的首要任务有三点：第一，每时每刻地宣传H-Pay，使用H-Pay；第二，全球喜马拉雅农场要竭尽全力地以合法手段推广H-Pay，增加H-Pay的使用场合；第三，认真研究H-Pay的可应用领域，挖掘H-Pay的独特使用方法。
 
-随着中共病毒（新冠病毒Covid-19）感染人数的下降，以色列放宽规定，许多地方不再需要出示疫苗接种证明。
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
 
-在以色列，从7日起，在餐厅、电影院、健身房、酒店等场所，不再需要出示“绿色通行证”的疫苗接种证明。尽管一些室内集会活动场所和俱乐部仍然需要“绿色疫苗护照”，但将取消对户外聚会和商业设施人数的限制以及对餐厅餐桌间距的限制。
 
-卫生部解释说，感染高峰正在过去，即使接种过疫苗的人也会感染Omicron毒株，因此已经失去了监管的有效性。
-
-在以色列，上月底每天新增感染人数超过8.3万人，但最近已降至3.3万人左右。
-
-信息来源：
-
-[イスラエル　レストランなどワクチン接種証明不要に](https://news.tv-asahi.co.jp/news_international/articles/000244027.html)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
