--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,15 +1,15 @@
 ---
-title: 就做你自己
+title: 共产党企图干扰破坏新中国联邦春节大直播
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968291/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968403/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-2月1日，郭文贵先生在GTV大直播透露，我们要做自己，不要在乎别人的看法。二战时期的丘吉尔和密特朗就是做自己、不在乎别人的看法，在危险和失败当中死里求生，最后创造了英国和法国的历史。他们是精英、是全世界的英雄。
+2月1日，郭文贵先生在GTV大直播透露，郭文贵先生得到情报，中共内部下令绝不让新中国联邦春晚直播成功，是最高政治要求。然而，西方很多国家、还有甜蜜蜜运动的参与者，都希望新中国联邦的春晚直播成功。新中国联邦春晚带给你想象不到的，这叫和平时期的战争。
 
 *编辑：东京樱花团/tdownc2p
-发布：东京樱花团/ 平安卿卿*
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
