--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,15 +1,14 @@
 ---
-title: 七哥谈中共和哈萨克斯坦（一）
+title: 七哥童年经历
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968304/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968404/)
 
 整理：雅典娜速记组
 编辑：tianzhihuan
 
-我谢谢青青草原，国内很多战友都跟我说，看到了青青草原，他说真的是哈萨克族在新疆是很重要的，而且是文化的这个中心啊。那么共产党在这个哈萨克斯坦，纳扎尔巴耶夫在伦敦的房子非常非常的漂亮，非常有品位。哈萨克族的人，就像青青草原这个脸一样，他们特色很明显。就是有伊朗，那个波斯人的那种品位啊。你看到世界时尚很多人，你看我穿的衣服的美，LOUISANA（路易皮安纳）还有做这个爱马仕，平安的媳妇，所有的人几乎都是伊朗犹太人啊。还有搞古董的，记录的伊朗犹太人，那么伊朗波斯文化和中东文化，包括整个一带一路到哈萨克斯坦，整个这过去，新疆哈萨克族和新疆维族。还有土耳其，它都是连在一起的，这是一个文化的一个主脉络啊，而且历史很悠久。
-
-共产党，整个真的是你想象不到，他现在竟然想着操控这一切事情，你想想，王毅去了阿富汗，阿富汗就就变成那样了。现在每天要饿死上百人，我每天醒来时候都会为他们祈福。然后你看到了，到了哈萨克斯坦，直接是不是就完了，就成这了啊。但是你要看到，无论是萨达姆，还是乌干达的阿明还是苏哈托，还是当年的日本天皇，包括希特勒把毛泽东，斯大林所有的过去，就是把国家变成家天下，就是他家族的几个人的。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（一）-1-1.jpg)
+雷蒙：
+我就是刚才发表一下感想吧，就是因为七哥从很小的可能8岁可能就开始用自己的实际行动去，经历了这么多，就是一步一步，走到今天的这个位置。所以说对我们每个人来说都是都是一个借鉴和和学习的地方吧。就是我们每个人都需要通过自己一个实际行动啊去踏踏实实的走好每一步，就包括我们把新中国联邦啊takedown CCP每一步，不能，真正的去落实到实处，而不是说我们，听完节目之后就结束了，每一步呢，我们都希望有一个实际的行动方案，或者说我们每一每一个阶段我们都有相应的目标去实现它好的。说一下我的个人的这个分享啊，就是说我觉得七哥最牛的一点就是他把整个政治经济军事文化啊，还有潮流这些东西包括音乐，都就是说跟共产党在不同的维度在作战。因为共产党他毕竟是一个国家力量，他政权对吧？它的力量还是相对比较强大的，拥有核武器，然后呢？我们把它拖入到各个领域里面去作战它的力量就会分化瓦解，而不是说聚成一个，这样一个拳头一样的，因为老毛在之前不是说嘛他打他这个就歼敌的话，他一定就是说这股力量去歼一股力量是吧？那我们就把他的整个的力量给他分散瓦解，我们在每个领域都对他形成合围，形成这种最优势的这个力量去去歼他，所以我觉得这个可能也是记着一个策略啊，不知道七哥您怎么看？
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥童年经历-.001.jpeg)
 2022年1月7日文贵大直播
 
 *发布：tianzhihuan*
