--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,12 +1,12 @@
 ---
-title: 全世界人民珍惜生命、远离中共
+title: 美国和上合组织较量
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968292/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968402/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-2月2日，郭文贵先生在GTV大直播透露，说到文艺、体育、媒体、企业等各行各业，以及海外政商、宗教等各界人士，不论男女不分长幼，只要是跟中共打过交道的，下场无不身败名裂、灰飞烟灭。郭先生在此再次告诫全世界所有想好好活下去的聪明智慧的人们，要珍惜生命，远离中共。
+1月12日，郭文贵先生在GTV大直播透露，上合组织是江家势力，（塔吉克斯坦）承诺把江家利益永远保护好，甚至高于宪法。阿富汗事件是美国和上合组织的较量，包括俄罗斯、白俄罗斯、吉尔吉斯斯坦、阿塞拜疆、哈萨克斯坦、中共等都是上合组织的主要力量。美国和上合组织都想通过阿富汗争夺中亚的石油市场。
 
 *编辑：东京樱花团/tdownc2p
 发布：东京樱花团/平安卿卿*
