--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,47 +1,23 @@
 ---
-title: 猪窝里的老人，何时能有个避风躲雨的屋檐
+title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1968167/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
 
-作者：香草山健身部-新世界的一员
+撰稿：待命（文暁）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
+2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
 
+在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good.png)
-寒冬凛然，一位垂暮的老人住在没有门窗、没有取暖设施的像猪圈一样的房子里，一大帮穿着红色义工服的人围着破房子唱歌祝福。一个手拿拿照相机的人焦点对着抹眼泪的老奶奶，一个老爷爷被挤出房子外面，团缩着身子哭笑不得地看着这一大帮人。
-视频源自网络
-这样的视频，让我的汗毛根根竖起。在这样寒冷的天气里，在这样没有门窗没有吃穿的环境下，她们竟然唱着祝福你快乐祝福你长寿的歌曲，可怜可悲的中国人呀，被中共的假大空灌输得没有了半点道德、常识，失去了真正的善良；又蠢又笨又无知的人们呀，要到什么时候才会停止这样滑稽的做秀，做出点实事，干出点实际性行动？又或者不要去打扰已经够可怜的老人家了。
+在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
 
-其实我们中国人是世界上最善良的人民，我们历代来把有钱人家做好事，行善事，称之为积德。行好事，说好话，做好人，广积德，这些都是我们的传统美德，很多侠义的故事也流传至今，教导人们要传承这样的品质。 平时频繁的聊天中，很多人会谈自己能为社会做些什么好事，可很多人也都会说，现在假的太多，不想把善心变成形式，还为他人提供谋利谋名的帮凶。
+于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
 
-好一个“不想把善心变成形式，还为他人提供谋利谋名的帮凶。”捣毁人们善念的是中国共产党，它设置的红十字的假恶丑压垮了中国人行善的义举，是中国共产党红十字会包养的情妇，郭美美的晒富，让所有善良的人们，失去了做慈善的信心和真心。
+然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
 
-笔者过去曾经参加过很多的义工活动和慈善活动，每一次回来，做了好事的心情比不做的时候更闷闷不乐，因为每一次活动，每一次组织，都是一大帮人过去送点米送点吃，然后大拍特拍，晒朋友圈、晒抖音、晒下面虚伪的评论。我可怜可悲的同胞们，伪装成好人打扰贫穷的人家，其实就是在行平庸之恶。有的也许是真心想做好事，但被裹挟着一起做戏；有的是赶个热闹；有的要拍个照好给人一种做好事的形象；有的甚至是借此或者趁机谋利，就如笔者参加过的一个活动，名叫狮子会，压根就是骗善良人的钱，每年需要交会费，而不需要捐赠衣服或其他物资，更不能直接给贫困人员孤寡老人钱，理由都是有统一安排。但实际情况是没有任何一个组织真正去关心贫困家庭的人，更别说出现帮助解决困难的人。行善一旦跌落成戏子的节奏，还有什么人性可言？
+翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
 
-看到这样无窗无门的居所，心情是沉重的。我们中国人在共产党的奴役下，到底还有多少这样的杨改兰式的家庭？不消灭中国共产党，中国人永远杜绝不了吃不起、穿不起，住不起、生不起、死不起的悲催结局；不打破中共的假恶丑，我们中国人就一直走不出它设置的虚伪的怪圈。人假如没有信仰，所有的行动基本都是形式主义，这是中国共产党刻意传播丑陋，被感染了愚昧病的多数中国人的心理，中共是颠倒善恶的邪教组织。
-
-在墙国只怕这样住猪圈的老人们，处处可见。中共存在一天，他们想有个避风躲雨的屋檐就永远是个奢侈的梦想，我们中国人该结束这样悲惨的遭遇了，消灭中共是解决天下父母最基本吃住的必须！
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-17.jpg)
-
-编辑/校对/发稿：兰兰
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-1.png)
-
+信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
 
  
 
