--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,25 +1,50 @@
 ---
-title: 三个工作重心 &#124; 新中国联邦力图阻止反华，团结人心，做好教育
+title: 单伟健在杨贝贝虚假采访背后的金融运作
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1967443/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1968053/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+加拿大温哥华扬帆农场：薇文viven
 
-2月6日，郭文贵先生于GTV、Gettr大直播中公布今年新中国联邦的三个工作重心，并表示，人生做再多正确的决定，若做错一次，有可能一切皆毁。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/bb0bd88f0d3f6f3856a10d3712ebbd29.jpg)图片来源Gettr
-
-
-G系列生态圈是新中国联邦的核心力量，自王者GTV的诞生到Hcoin（喜币）目前500多倍的收益，再到0手续费Hpay（喜支付）的汇通天下，我们已经做的够多够优秀。所以，今年要把已有的项目做好，不再延展其他新的项目，避免无限扩张而引发灾难。这样新中国联邦可以把更多的精力集中在今年最大的挑战——排华问题，如何阻止世界范围的排华浪潮是新中国联邦的首要课题。阻止不了西方世界的排华骚乱，灭共也就失去了原本的意义。
-
-第二、要让国内更多的人参与到爆料革命，除了继续做好直播、文宣的工作，还会实施B计划，即让国内音乐界、教育界、军界、情报界、地方政府、企业界等也能得到Hcoin（喜币），未来也能按照使用标准享受到“躺平币”。届时，从东北的山沟到喜马拉雅的山脚，每个人都能闻到Hcoin（喜币）和“躺平币”的味道。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/c9acc3ac59b937e9d8ba81cf013107f5.jpg)图片来源Gettr
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-3-edited.jpg)图片来源：weibo
 
 
-由于小学博士习近平自身对真理和人性认知的局限性与掌握最高权力的巨大矛盾，深刻诠释了没有和能力、权力相匹配的教育，任何的成功一定是更大的灾难。
+前段时间HBO Vice 散播种族歧视和恶意诋毁爆料革命和郭文贵先生的视频，背后有中共巨资借用“腾讯音乐娱乐”(TME)操作平台，利用海外金融投资公司“太盟集团”(PAG)  和“德太资本”(TPG)，通过中共特务单伟建和王岐山家族的孙强两人处心积虑运作的结果。
 
-所以第三、新中国联邦要把新中国人的G-EDU（G教育）做好，这是新中国的未来和希望。具体的激励政策是，凡是原新东方（或同等级别的）员工参与到G-EDU（G教育）的建设，将得到1.5倍原工资待遇，特殊贡献者甚至可以得到2倍原工资待遇，还可以选择用Hcoin（喜币）或者HDO（喜美元）支付工资，有意愿者请速与磐石农场联系。用按小时、按天、按周支付Hcoin（喜币）和HDO（喜美元）的实际行动做到走新东方的路，让新东方无路可走。
+单伟建的太盟在2017年持股9.8%成为 TME的第二大股东；2018年 腾讯音乐在美国上市，太盟靠出售美国存托凭证募资$5,700 万美元，并继续持股 9% ；
 
-魔鬼在咆哮，苍天在愤怒，G系列在拯救。世界经济和供应链的崩塌，新冠病毒和新冠毒疫苗对全人类的威胁，世界面临大重启，新中国联邦风景独好。
+华纳公司旗下的HBO2013年与腾讯签约入驻中国，2018年因主持人嘲讽习近平为“维尼熊”后，一直被中共封杀，失去每年近50%增长的华纳损失惨重。
+
+单伟建出手使用金融手段控制华纳： TME投资 “华纳音乐”的股权2%、双方成立合资公司、允许华纳音乐向TME的经营者授权，华纳公司和华纳音乐的股价双双开始飙升。
+
+孙强运作的德太资本2017年就已投资 HBOVice 达$4.5亿，2019年，有中金资本的平台撑腰，又注资$4500万美元，助HBOVice上市，但至今未成功。
+
+中共蓄谋已久，花费高昂代价，吃准华纳和HBO逐利的贪婪本性，用单伟建和孙强两路夹击，犁庭扫穴，使之成为中共作恶的工具和替罪羊。中共因惧怕新中国联邦而导致的又一愚蠢行径，不断为全球灭共逆增上缘。
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/f.jpg)图片来源：GNEWS
+
+
+参考资料：
+
+[Tencent Music Entertainment: China’s Largest Online Music Entertainment Platform Operator](https://seekingalpha.com/article/4412340-tencent-music-entertainment-online-music-entertainment-platform-operator)
+
+[HBO Website Is Down in China After John Oliver Skewers Xi Jinping on Last Week Tonight](https://time.com/5321945/hbo-china-john-oliver-xi-jinping/)
+
+[Private Capital-backed Tencent Music Raises US$1.1 Billion in Initial Public Offering (Asia)](https://www.globalprivatecapital.org/newsroom/private-capital-backed-tencent-music-raises-us1-1-billion-in-initial-public-offering-asia/)
+
+[SEC FORM F-1 Tencent Music Entertainment Group 2018.10](https://www.sec.gov/Archives/edgar/data/1744676/000119312518290581/d624633df1.htm)
+
+[Warner Music Partners With Tencent on Joint Venture Record Label in China](https://www.hollywoodreporter.com/news/music-news/warner-music-partners-with-tencent-on-joint-venture-record-label-in-china-4154621/)
+
+[腾讯音乐娱乐集团(TME)公司深度报告](http://pdf.dfcfw.com/pdf/H3_AP201901281289167588_1.pdf)
+
+[TPG与中金资本成立 “中国协同效应”平台](https://www.financialnews.com.cn/zq/pevc/201901/t20190110_152759.html)
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/e-edited.jpg)图片来源：sjmrw
+
+
+* * *
+
+编辑发稿：硫酸羟氯喹64
 
  
 
