--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,13 +1,13 @@
 ---
-title: 强制疫苗什么时候会停止呢？
+title: 什么是天机（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968474/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968511/)
 
 整理：雅典娜速记组
 编辑：tianzhihuan
 
-我觉得现在已经12月了，我也觉得本来这个12月底以前，咱们已经1月了，我觉得是很有希望了。现在看到了实际上很多国家已经结束了，像日本基本上已经是完全结束了，你要看到很多国家在2个月以前制定的强制计划几乎都停了，包括澳大利亚那么凶猛，它也没有推行下去，加拿大也没推行下去，美国也没有推行下去，你一定要看到绝大多数国家所在2个月以前，5个月前执行的政策，几乎60%-70%，没有执行下去。特别照顾强制俩字儿，它没有得到落实。包括你在的地方，是吧？它只是威胁变相，强制这个字政府已经承担不了，基本是已经消失。大家一定要看到，这就是你要和自己的良知和勇气永远作战的结果。如果你不相信，那你就去试吧，很简单，而且我相信5月份以前基本上法定，现在只是法定上让不让你，因为美国现在还在探讨呢，是不是让你强制不强制，你强制的结果就是把你按在地上，你再强制，不问了就是你都有选择，美国的失业率，美国的整个离职率已经证明给你了，我用我的决心证明我不被你强制。所以说我觉得强制疫苗在5月份以前一定会消失，我深信不疑，而且我认为现在是最后的疯狂。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/强制疫苗什么时候会停止呢？-.jpg)
+从过去的毛泽东到过去的华国锋，到汪东兴到最后杨得志、杨德忠、邓小平，他们都管这个。为啥要管呢？三通论里边就像咱今天穿的时尚、衣服，你的时尚，你的穿着，你的头发，就是你的精气神就是你的生和命，你的过去和现在。它不仅仅是个宣传作用，它在三通论里边是有定义的，这为啥有些人不愿意告诉你生辰八字，不愿意把衣服给你呀？你把我的鞋拿走了，把我衣服拿走了，弄个什么埋上，像那个共产党把盘古大观前面挖一坑，弄个大印刻上郭文贵，那乱七八糟把郭文贵压在了山底下去，他深信不疑的，共产党每年都做法事，要压住中国的八方。五十几个民族都是被共产党诅咒的，如果你再不信，你到香山看看，香山的卧佛寺每年都做什么法事，戒台寺都做什么法事，你在看西山的法门寺他让你少数民族去碰那个舍利子吗？你永远不可能，包括乌巴托乌兰夫，这样的人，都不允许他靠近，共产党很迷信，你靠近了不行。如果他不相信他干嘛把舍利子保护那么好，建那么大个庙，七哥多次抚摸过，甚至放在手上。兄弟姐妹们，一定要相信，共产党让你不知道的都是你必须知道的，共产党凡是说他错的，你都是认为是真的，凡是共产党现在所做的这些事情，就是上天在诅咒共产党，在解放中国人和全世界人的一切神意旨意。我不是神神叨叨，你看新中国联邦你就明白了。我先说到这儿，不然时间又过了，时间倒流了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/什么是天机-（二）-.jpg)
 2022年1月7日文贵大直播
 
 *发布：tianzhihuan*
