--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,12 +1,12 @@
 ---
-title: 共产党企图干扰破坏新中国联邦春节大直播
+title: 甜蜜蜜运动使中共冬奥会成冬眠会
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968403/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968488/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-2月1日，郭文贵先生在GTV大直播透露，郭文贵先生得到情报，中共内部下令绝不让新中国联邦春晚直播成功，是最高政治要求。然而，西方很多国家、还有甜蜜蜜运动的参与者，都希望新中国联邦的春晚直播成功。新中国联邦春晚带给你想象不到的，这叫和平时期的战争。
+2月2日，郭文贵先生在GTV大直播透露，新中国联邦的甜蜜蜜运动，与中共较量的第一回合是美国外交撤馆；第二回合是《甜蜜蜜》、《一帘幽梦》、《我爱你塞北的雪》三首灭共歌声的全球环绕；第三回合就是对着冬奥会去的！就是要把中共冬奥会变成冬眠会。
 
 *编辑：东京樱花团/tdownc2p
 发布：东京樱花团/平安卿卿*
