--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,83 +1,19 @@
 ---
-title: 视频&#124; H-PAY已完成人民币到账秒转HDO
+title: 红色的秘密
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1968509/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968546/)
 
-制作：香草山视频部
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-你们记住一个重点
-这个人民币你们未来会意识到
-我们的本事到了啥程度
-我会告诉你
-今天我就公开了告诉共产党
-他除了把他的银行全关了
-他把人民币全都停了
-他只要做不到这一点
-他只要银行还存在一家店
-只要不是现金兑换
-强迫你抱着现金麻袋来
-咱们人民币到海外来几乎是无间断、无阻隔
-你知道为啥吗
-我告诉你我咋干的
-你也不用在这块瞎报告骗钱去
-人民币现在所有在国内
-所有流通话和银行的钱
-我告诉大家
-他都在社会当中已经形成了
-中国共产党最牛叉的
-已经把它去纸币化做到了90%以上
-只要你去了纸币化
-你都是纸币化我就傻眼了
-我不能拿着麻袋给你背出来呀
-这个我做不到
-只要电子化有两个你脱不了
-就人民银行
-第二就是中间行
-就所谓的中转啊转换啊
-只要你在电脑上能过
-我就在电脑上能给你留下属于我的钱
-就这么牛
-你除非把你的系统都关了
-这就像我在你家里放了1,000只老鼠
-除非你把你家房子烧了
-你想把这1,000只老鼠抓出去
-那我再给你放1亿只老鼠
-你抓1亿只老鼠会再放10亿只老鼠
-这就是咱们现在这个电子系统
-大家记住
-你搞防火墙
-我就在你防火墙上拉一光纤
-我让你这个墙绝对不管用
-我可以告诉大家
-从昨天我们人民币最起码
-小12个亿到13个亿都已经交易完了
-而且这钱都是秒到
-所有使用过的战友们都是惊讶万分
-但是现在唯一个
-就没有全面给你打开
-就是我们的农场授权相信的人
-因为一个授权
-就是给人打开了一个特殊通道
-这个特殊通道是必须要有的
-因为现在还不是普及性的
-但是不会超过半年到一年
-绝对不会超过
-就咱公开挂在那
-所有国内人就付人民币就行了
-公开的
-任何币喜支付会有很多币可以支付
-我就给你说到这为止
+#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
+视频定位：BENJ1；WEI
 
-发稿：雪梨
+*发布：陶子*
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
