--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,16 +1,23 @@
 ---
-title: 美国和上合组织较量
+title: 强制疫苗什么时候会停止呢？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968402/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968474/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-1月12日，郭文贵先生在GTV大直播透露，上合组织是江家势力，（塔吉克斯坦）承诺把江家利益永远保护好，甚至高于宪法。阿富汗事件是美国和上合组织的较量，包括俄罗斯、白俄罗斯、吉尔吉斯斯坦、阿塞拜疆、哈萨克斯坦、中共等都是上合组织的主要力量。美国和上合组织都想通过阿富汗争夺中亚的石油市场。
+我觉得现在已经12月了，我也觉得本来这个12月底以前，咱们已经1月了，我觉得是很有希望了。现在看到了实际上很多国家已经结束了，像日本基本上已经是完全结束了，你要看到很多国家在2个月以前制定的强制计划几乎都停了，包括澳大利亚那么凶猛，它也没有推行下去，加拿大也没推行下去，美国也没有推行下去，你一定要看到绝大多数国家所在2个月以前，5个月前执行的政策，几乎60%-70%，没有执行下去。特别照顾强制俩字儿，它没有得到落实。包括你在的地方，是吧？它只是威胁变相，强制这个字政府已经承担不了，基本是已经消失。大家一定要看到，这就是你要和自己的良知和勇气永远作战的结果。如果你不相信，那你就去试吧，很简单，而且我相信5月份以前基本上法定，现在只是法定上让不让你，因为美国现在还在探讨呢，是不是让你强制不强制，你强制的结果就是把你按在地上，你再强制，不问了就是你都有选择，美国的失业率，美国的整个离职率已经证明给你了，我用我的决心证明我不被你强制。所以说我觉得强制疫苗在5月份以前一定会消失，我深信不疑，而且我认为现在是最后的疯狂。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/强制疫苗什么时候会停止呢？-.jpg)
+2022年1月7日文贵大直播
 
-*编辑：东京樱花团/tdownc2p
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
