--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,16 +1,21 @@
 ---
-title: 共产党年年办一场充斥着各种假恶丑的春晚
+title: 雅典娜时报-第197期
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968367/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968467/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+#### **《雅典娜时报》汇聚全球新闻时事**
 
-2月1日，郭文贵先生在GTV大直播透露，中共的春晚是洗脑的，藏污纳垢，充斥着金钱交易、性交易。大牌演员和普通演员待遇不同。中央电视台的每样摆设都有回扣，电视播的都是假唱、假录。但是老百姓付的都是真钱，真感情。90%以上的人都反应不过来，中央电视台是最肮脏的地方。
+#### 编辑：精灵蓝
+排版：小蚂蚁614
+![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590200291358/155_4.png?width=768&amp;height=1144)![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590787481621/155_3.png?width=768&amp;height=1144)
+*发布：陶子*
 
-*编辑：东京樱花团/tdownc2p
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
