--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,15 +1,15 @@
 ---
-title: 一帘幽梦的缘起
+title: 共产党企图干扰破坏新中国联邦春节大直播
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968294/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968403/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-2月1日，郭文贵先生在GTV大直播透露，一帘幽梦这首歌缘起于被救助的战友，是上天派这位战友送来的缘分。由郭文贵先生演唱的这首一帘幽梦，让文贵先生过去的老同事们感到幸福，也鼓励着他们对中共永不妥协的决心。每个人都要懂得，人生最重要的是一定要有信仰。
+2月1日，郭文贵先生在GTV大直播透露，郭文贵先生得到情报，中共内部下令绝不让新中国联邦春晚直播成功，是最高政治要求。然而，西方很多国家、还有甜蜜蜜运动的参与者，都希望新中国联邦的春晚直播成功。新中国联邦春晚带给你想象不到的，这叫和平时期的战争。
 
 *编辑：东京樱花团/tdownc2p
-发布：东京樱花团/ 平安卿卿*
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
