--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,16 +1,44 @@
 ---
-title: 被抓的董宏曾经对文贵先生说共产党就是黑社会流氓骗子
+title: 探望英雄家人的七哥因英雄家人对英雄不理解而满脸怒气
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968489/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968540/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+G-TV视频链接：[https://gtv.org/video/id=62007ba5585ecc15d73e5878](https://gtv.org/video/id=62007ba5585ecc15d73e5878)
 
-1月30日，郭文贵先生在GTV大直播透露，被判死缓的董宏，是王岐山最信任的马仔，拿走中国多少钱？董曾告诉郭先生，共产党就是黑社会流氓骗子，傻子才相信它 ，聪明人利用这个黑社会达到自己的目的。中国第一家破产的广东信托公司，就是王、董和康典干的。后来，董又把张宏伟的新华人寿给了康，王、董、康等因此在瑞士拿走了几百亿美元。
+**郭文贵先生：**我告诉你很简单，你就在直播每次当中，你用心地体会人的心的变化。还有一个，每件事情你一定要记住你做事的动机是什么？如果我没有我儿时那样成长，昨天我发出去那个衣服，是我从清丰看守所出来后，我去看望那个“处男英雄“的家人，这是第三次以上了。他们的家人在当地开了一个照相的，当时照相是很赚钱的，做了几个坐龙辇的、龙椅的，还有几个抬轿（照相道具）的，做这个生意。他家人就让我坐到那，他们都叫我叫老七：“老七，我给你照个相。”
 
-*编辑：东京樱花团/tdownc2p
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+在这个之前我们谈到他弟弟的时候，他说：“我弟弟经常往这儿来帮忙，有时候给我们挣点钱。”他说“在这里边，他说我们挣的钱给当地的景观处三个人送礼”，他说“你说这小子他就不去送礼，一说送礼他就骂。他说‘就你们搞腐败，咱送什么礼？凭啥给他送礼？’”他说：“你说他这啥脑子？他不给他送礼，人凭啥让咱在这儿？”所以他说：“他这个被枪毙，他有原因的”。他的家人，他母亲这么高的教授，他的家人认为这个弟弟是该枪毙的。
+
+你看看，他因为他弟弟来帮忙，就是认为你在这景观里摆景观照相，是吧？你不给当地的人钱，你当然是不对的了，是吧？你看这个逻辑，我当时很不高兴。他让我坐在那照相，我一脸的怒气。我说：“就是因为不给他们钱才是对的，他凭什么就被枪毙了？”他说（学当地话）：“咦那讲球民主，民主当钱花？民主？” 这是他哥哥原话。
+
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+
+编辑整理：Jacques；
+
+字幕文件制作：大好河山；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
