--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,24 +1,27 @@
 ---
-title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
+title: 以色列逐渐废除疫苗护照
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968308/)
 
-撰稿：待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
-2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
+撰稿：东京樱花团/立正道
 
-在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/以色列逐渐废除疫苗护照.png)图片来源于本文视频截图
 
-在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
+随着中共病毒（新冠病毒Covid-19）感染人数的下降，以色列放宽规定，许多地方不再需要出示疫苗接种证明。
 
-于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
+在以色列，从7日起，在餐厅、电影院、健身房、酒店等场所，不再需要出示“绿色通行证”的疫苗接种证明。尽管一些室内集会活动场所和俱乐部仍然需要“绿色疫苗护照”，但将取消对户外聚会和商业设施人数的限制以及对餐厅餐桌间距的限制。
 
-然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
+卫生部解释说，感染高峰正在过去，即使接种过疫苗的人也会感染Omicron毒株，因此已经失去了监管的有效性。
 
-翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
+在以色列，上月底每天新增感染人数超过8.3万人，但最近已降至3.3万人左右。
 
-信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
+信息来源：
 
+[イスラエル　レストランなどワクチン接種証明不要に](https://news.tv-asahi.co.jp/news_international/articles/000244027.html)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
