--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,23 +1,25 @@
 ---
-title: 立陶宛外长今访澳 坚称不会更名台湾代表处
+title: 七哥谈中共和哈萨克斯坦（一）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968214/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968304/)
 
-撰稿：东京樱花团/asket
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-617.png)[图片来源](https://newsline.news/gabrielius-landsbergis-minister-towards-authoritarian-regimes/)
-立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
+我谢谢青青草原，国内很多战友都跟我说，看到了青青草原，他说真的是哈萨克族在新疆是很重要的，而且是文化的这个中心啊。那么共产党在这个哈萨克斯坦，纳扎尔巴耶夫在伦敦的房子非常非常的漂亮，非常有品位。哈萨克族的人，就像青青草原这个脸一样，他们特色很明显。就是有伊朗，那个波斯人的那种品位啊。你看到世界时尚很多人，你看我穿的衣服的美，LOUISANA（路易皮安纳）还有做这个爱马仕，平安的媳妇，所有的人几乎都是伊朗犹太人啊。还有搞古董的，记录的伊朗犹太人，那么伊朗波斯文化和中东文化，包括整个一带一路到哈萨克斯坦，整个这过去，新疆哈萨克族和新疆维族。还有土耳其，它都是连在一起的，这是一个文化的一个主脉络啊，而且历史很悠久。
 
-据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
+共产党，整个真的是你想象不到，他现在竟然想着操控这一切事情，你想想，王毅去了阿富汗，阿富汗就就变成那样了。现在每天要饿死上百人，我每天醒来时候都会为他们祈福。然后你看到了，到了哈萨克斯坦，直接是不是就完了，就成这了啊。但是你要看到，无论是萨达姆，还是乌干达的阿明还是苏哈托，还是当年的日本天皇，包括希特勒把毛泽东，斯大林所有的过去，就是把国家变成家天下，就是他家族的几个人的。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（一）-1-1.jpg)
+2022年1月7日文贵大直播
 
-对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-信息源：[立陶宛外長今訪澳-堅稱台灣代表處不更名](https://www.rfi.fr/tw/%E6%AD%90%E6%B4%B2/20220206-%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7%E4%BB%8A%E8%A8%AA%E6%BE%B3-%E5%A0%85%E7%A8%B1%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E4%B8%8D%E6%9B%B4%E5%90%8D)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
