--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,26 +1,16 @@
 ---
-title: 中共收集他人信息的冬眠会和普京离开的真相
+title: 就做你自己
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968179/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968291/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30～8-35～1.png)
-你外交部、共产党但凡要点脸，你该栓上个绳子咬死自己，结果是25个国家，你给我数一数有几个真正的国家元首？20几个国家？真正到现场有实力的人，超过5个手指头了吗？这已经不是冬眠会了，任何一个有脑子的人都知道这次冬奥会开幕式成了共产党结束的闭幕式！
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-中国人2008年举办奥运会所有的成功，到冬奥会一秒之间全完。冬奥会有规定，不允许用苹果手机，全用华为手机。咱战友特聪明，说“七哥给你发信息，为了他们不监控，你知道我用啥招吧？我随时知道他们冬奥会什么情况，筹委会什么情况，运动员到场情况。包括有人专门收集所谓运动员的DNA，还有想办法收集运动员那个那个的。七哥，你知道最后发生什么事情？来到这儿的几乎就没有有成就的运动员。咱们马桶是直接集中收尿和大便。”这都是咱战友在管，所以不管你哪个元首去中国，从你开始到，到最后走，你的尿和屎，化验的，收集你DNA的等等，七哥全在掌握中。
+2月1日，郭文贵先生在GTV大直播透露，我们要做自己，不要在乎别人的看法。二战时期的丘吉尔和密特朗就是做自己、不在乎别人的看法，在危险和失败当中死里求生，最后创造了英国和法国的历史。他们是精英、是全世界的英雄。
 
-新中国联邦人这次可以说，主导了整个冬奥会的开幕式。我们很成功的让这些国家的运动员们和这些元首们看清了中共，看清了冬奥会。让他们一生，不会再跟共产党参加任何所谓的国际仪式。这就是普京离开的原因，我们让普京知道了事情的真相。普京当时拿到其中两张纸说：如果这里边儿任何一句话，有人给我提醒我会转身就走。普京真的去了，去之前我就说了，共产党会在你到了以后怎么耍你，找什么理由。普京说只要是里边有一句话发生，我扭头就走，最后他扭身就走了是吧？哈哈！
-
-*发布：开智则立*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/ 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
