--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,24 +1,23 @@
 ---
-title: 俄罗斯感染中共病毒的记录创历史新高
+title: 立陶宛外长今访澳 坚称不会更名台湾代表处
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968152/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968214/)
 
-#### 撰稿：彩虹       
+撰稿：东京樱花团/asket
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-617.png)[图片来源](https://newsline.news/gabrielius-landsbergis-minister-towards-authoritarian-regimes/)
+立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-615.png)图片来源：ABC News
-2月6日，《国会山报》引述《美联社》报道，周日，俄罗斯新增中共病毒（COVID-19）病例创下历史纪录，达到189,071个，比周六的感染病例增加了2800例，比一个月前报告的感染数量增加了10倍。
+立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
 
-然而，尽管病例数上升，俄罗斯因感染中共病毒的死亡人数略有下降。周日有661人死亡，而1月初报告的死亡人数为796人。然而，俄罗斯确实是欧洲因感染中共病毒死亡人数最多的国家，整个中共病毒疫情期间报告的死亡人数超过335,400人，其COVID-19（中共病毒）工作组还报告了1,280万例病毒感染者。
+据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
 
-随着病例的激增，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）上周表示，当局不打算实行任何封锁或其他COVID-19限制措施。
+对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
 
-根据报道，尽管俄罗斯是世界上最早提供中共病毒（COVID-19）疫苗的国家之一，但只有约一半的人口接种了中共病毒疫苗。
+信息源：[立陶宛外長今訪澳-堅稱台灣代表處不更名](https://www.rfi.fr/tw/%E6%AD%90%E6%B4%B2/20220206-%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7%E4%BB%8A%E8%A8%AA%E6%BE%B3-%E5%A0%85%E7%A8%B1%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E4%B8%8D%E6%9B%B4%E5%90%8D)
 
-**新闻报道**
-
-[Russia COVID-19 infections 10 times higher than one month ago](https://thehill.com/policy/international/593037-russia-covid-19-infections-ten-times-higher-than-one-month-ago)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
