--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,50 +1,27 @@
 ---
-title: 荷兰记者冬奥会直播被拖走
+title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1968126/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
 
-作者：纽约香草山教育部 – Naughty(文行)， AT
+#### 撰稿：彩虹       
 
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
+2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
 
+威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
 
+施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
 
+据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
 
-据荷兰媒体报道，2月4日，在北京举行的冬奥会开幕式上，一名正在直播的荷兰记者被一名中共国安保人员拖走。
+根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
 
-不久，美国、荷兰、马来西亚等媒体接连进行了报道。
+**新闻来源**
 
-媒体披露的视频画面显示，几名安保官员包围了记者，其中一人在他站在离鸟巢不远的地方时强行抓住了他。
-
-尽管国际奥委会表示，这是一起孤立事件，不会影响外媒对奥运会的报道。但相关的荷兰媒体事后表示，在中共国参与报道的记者恐怕要经常面对这种情况。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide6-1.jpg)
-参考链接：
-[荷兰电视台记者报道北京冬奥会开幕式直播，被红袖彰生生推开了！全世界都看到了这一幕！ 这是真正的中国形象！](https://www.gettr.com/post/psk9pf20b7)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编：飞虹
-编辑：文特
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
 
  
 
