--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,27 +1,25 @@
 ---
-title: 英国军方最新报告警告来自太空的核攻击
+title: 中共收集他人信息的冬眠会和普京离开的真相
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968088/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968179/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-10.jpg)
-图片来源：www.secretchina.com
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30～8-35～1.png)
+你外交部、共产党但凡要点脸，你该栓上个绳子咬死自己，结果是25个国家，你给我数一数有几个真正的国家元首？20几个国家？真正到现场有实力的人，超过5个手指头了吗？这已经不是冬眠会了，任何一个有脑子的人都知道这次冬奥会开幕式成了共产党结束的闭幕式！
 
-零对冲网2月6日报道，随着中俄两国雄心勃勃发展更强有力的武器包括超音速导弹，可以通过发射至地球大气层后针对地球另一半的目标发起攻击，难怪更多的西方政府正在检查其能力，即在人类的“最终前沿”—-太空方面，不仅是进攻性，也包括防御性。
+中国人2008年举办奥运会所有的成功，到冬奥会一秒之间全完。冬奥会有规定，不允许用苹果手机，全用华为手机。咱战友特聪明，说“七哥给你发信息，为了他们不监控，你知道我用啥招吧？我随时知道他们冬奥会什么情况，筹委会什么情况，运动员到场情况。包括有人专门收集所谓运动员的DNA，还有想办法收集运动员那个那个的。七哥，你知道最后发生什么事情？来到这儿的几乎就没有有成就的运动员。咱们马桶是直接集中收尿和大便。”这都是咱战友在管，所以不管你哪个元首去中国，从你开始到，到最后走，你的尿和屎，化验的，收集你DNA的等等，七哥全在掌握中。
 
-由英国国防部本周发布的一项新的报告，权威机构警告说攻击者可能潜在性地发展外太空的核武器，可以导致“民用设施或可能是针对目标的永久性的杀伤性武器”。
+新中国联邦人这次可以说，主导了整个冬奥会的开幕式。我们很成功的让这些国家的运动员们和这些元首们看清了中共，看清了冬奥会。让他们一生，不会再跟共产党参加任何所谓的国际仪式。这就是普京离开的原因，我们让普京知道了事情的真相。普京当时拿到其中两张纸说：如果这里边儿任何一句话，有人给我提醒我会转身就走。普京真的去了，去之前我就说了，共产党会在你到了以后怎么耍你，找什么理由。普京说只要是里边有一句话发生，我扭头就走，最后他扭身就走了是吧？哈哈！
 
-该报告称到目前为止政府为其公民日常生活所能提供的保护，將有赖于对太空的控制。英国的对手很有可能在未来的战争中很快超越。
+*发布：开智则立*
 
-而在“太空优势”方面的维持控制是关键的，危险来自从网络攻击和电磁攻击到外太空的核攻击，例如由卫星制导的核导弹或从太空发射的导弹等。
-
-报告的结论很明确，英国和同盟国必须计划并投资，因为决定性的“太空竞赛”已经开始了。
-
-##### 新闻来源： [UK Military Warns About Risk Of Nuclear Attacks From Space In New Report](https://www.zerohedge.com/geopolitical/uk-military-warns-about-risk-nuclear-attacks-space-new-report)
-
-#  
-
-
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
