--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,27 +1,23 @@
 ---
-title: 拜登放弃对伊朗制裁
+title: 俄罗斯感染中共病毒的记录创历史新高
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968062/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968152/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-19.jpg)
-图片来源：posts.careerengine.us
+#### 撰稿：彩虹       
 
-美国合众社2月5日报道，拜登政府重新恢复2015年谈判期间的放弃对伊朗的制裁。美国全国广播公司和CNN新闻均报道了国务院周五通知国会立法者对伊朗的民用核项目放弃制裁。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-615.png)图片来源：ABC News
+2月6日，《国会山报》引述《美联社》报道，周日，俄罗斯新增中共病毒（COVID-19）病例创下历史纪录，达到189,071个，比周六的感染病例增加了2800例，比一个月前报告的感染数量增加了10倍。
 
-该放弃制裁决定将允许国家间在某些不扩散的情况下可以进行合作。这种不扩散活动将回到当时的国际核协议上，当时伊朗只需要几个星期就可以生产武器级别的核弹材料。
+然而，尽管病例数上升，俄罗斯因感染中共病毒的死亡人数略有下降。周日有661人死亡，而1月初报告的死亡人数为796人。然而，俄罗斯确实是欧洲因感染中共病毒死亡人数最多的国家，整个中共病毒疫情期间报告的死亡人数超过335,400人，其COVID-19（中共病毒）工作组还报告了1,280万例病毒感染者。
 
-而伊朗否认其有生产核武器的计划。川普政府于2018年再认证到期前收回了奥巴马时代的联合全面行动计划，称这是一个核心部分缺陷的东西，重新实施制裁。
+随着病例的激增，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）上周表示，当局不打算实行任何封锁或其他COVID-19限制措施。
 
-由于撤除了该计划，伊朗已经添加了铀浓缩供应井，违背了原来的承诺并拒绝了国际原子能机构人员进入核心区域。
+根据报道，尽管俄罗斯是世界上最早提供中共病毒（COVID-19）疫苗的国家之一，但只有约一半的人口接种了中共病毒疫苗。
 
-有官员说：” 如果不放弃制裁，有关与第三方针对堆积物的处理方面的详细技术讨论和其他不扩散价值的活动就无法开展。
+**新闻报道**
 
-本周早些时候，欧洲的合作者们在促进使美伊双方回到谈判桌上起了重要作用，国务院高级官员说根据目前伊朗的核项目，要回到2015年最初的协议将不太可能。
-
-##### 新闻来源： [Biden administration restores Iran sanctions waiver](https://www.upi.com/Top_News/US/2022/02/05/biden-restores-iran-sanctions-waiver-deadline-nuclear-deal-nears/6631644075537/)
-
-#  
+[Russia COVID-19 infections 10 times higher than one month ago](https://thehill.com/policy/international/593037-russia-covid-19-infections-ten-times-higher-than-one-month-ago)
 
  
 
