--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,44 +1,24 @@
 ---
-title: 墙内世界2022/02/03
+title: 习神不神了
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1967282/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1967922/)
 
-一、2月2日，中国北京。最繁忙的火车站由于中共政府举办冬季奥运会的严格流动限制而变得空荡荡。
+撰稿：爱战神
+上传：追着曙光跑
 
-二、1月29日，河北保定。中共在高速路入口处出现了荷枪实弹的持枪警察，意图向百姓传达高压威慑的氛围。
+中共国举一国之力，耗费了大量的人力、物力、财力举办了举世瞩目的冬季奥运会。在2022年2月4日终于开幕了，全世界两百多个国家，最后来参加的只有三十多个国家，都是一帮穷要饭的蹭吃蹭喝的伸手要钱的，世界上发达的国家特别是西方国家都没来。大概是因为恐惧中共病毒？害怕被感染？害怕被侮辱肛门检测？还是害怕中共栽赃嫁祸？这是他们一贯采用的卑劣手法。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/习神.jpg)
+就在中共冬季奥运会开幕的同时文贵先生紧急大直播，劲爆中共奥运会出大事情了。中共为了举办冬季奥运会，习神给那些参加奥运会的国家千亿、百亿、十亿美元的送。拿钱不当钱，大撒币，这都是老百姓的民脂民膏，他一点都不心疼。他为了面子打台湾，实现他统一天下的春秋大梦；镇压香港学生运动，显示中共一党执政的威力。
 
-三、1月31日，浙江杭州。中共持续以防控疫情的借口，逐步加大各省市人员流动的限制。
+他死皮赖脸地邀请了俄罗斯总统普京大帝参加人造雪的奥运，并且送了1千亿美金给普京俄罗斯，冲着钱，普帝来了，习神貌似面子有了。没料到普京身边有16位保镖感染了中共病毒并且死了三个，普京大怒，其实习神也非常震惊和惊慌。正如文贵先生说：这次习神脸丢大发了！战友们没有找到开幕式上普京的镜头，最后找到乌克兰媒体报道普京坐在空旷的体育场馆，表情木讷。
 
-四、1月31日，广东深圳。凡是被中共政府通报新冠病毒确诊病例的城市，即意味着当地全体居民失去更大程度的人权和自由。
+还有一件大事文贵大直播中爆料，在盘古上面执勤的特警队头目倒地而亡，就在开幕式前两个小时，这两件诡异之事，对习神来讲是非常令他恐惧的。不管是对手的报复还是上天的安排，对他打击应该是非常大的，现实使劲抽他脸左右开弓“啪啪”响。导致他在开幕式上的讲话萎靡不振、耷拉着脑袋、肥胖臃肿、脸色发紫，那种状态令人震惊，让人感到他命不久矣……
 
-五、1月31日，广东深圳。中共政府核酸检测政策的执行并不是想要真正防控疫情扩散，只是为了让百姓失去更多的话语权。
+他的夫人彭丽媛神情严肃冷静，骨子里透着强悍和狠劲，霸气十足，不愧是接班人的形象。这次奥运会耗了纳税人万亿美元，都是老百姓的血汗钱，习神为了家天下大撒币，不差钱，反观老百姓灾难深重。习神罪孽深重，不可饶恕！
 
-六、2月1日，湖北武汉。一商场电梯突发故障，包含老人和6岁儿童的十几人被困地下二层。
+接下来看习神如何表演，媒体怎样地粉饰太平、吹牛获得了多少枚金牌、小粉红如何地爱国、万邦来朝是怎样欢乐圣景…… 俗话说死要面子活受罪，习神耗费一国之力举办的人造雪、共雪的奥运，成了他冬眠厄运、恶梦的开始。
 
-七、1月28日，浙江湖州。一大桥护坡深夜垮塌，十余辆轿车被砸。
-
-八、1月29日，重庆。银行门口取钱队伍排起长龙。全国银行门口频繁出现了取现金困难的场景。银行的钱都去哪儿了？
-
-九、近日 中共三部门发文：2022年3月1日起，个人存取现金超5万元需登记资金来源。百姓手里的钱自由流动将会可预见的更加困难。
-
-十、1月28日，上海。中共国没有市场经济，在中共国无证寸步难行。中共官方称一女子在没有烟花销售许可证的情况下，从外地购入烟花爆竹4箱，在网上加价转卖获利1800余元，被依法行政拘留。
-
-十一、2月1日早上7点半，陕西大荔。男子放炮后仅20秒禁放宣传车赶到，对其进行了批评教育。中共在监控人民方面从来不会缺经费和人员。
-
-*搜集：Free20200604、加油干吧总加速师、Filon |听写：trustguo | 翻译：叶知秋|校对：yyshere*
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
+这次习神终于是面子里子都没了！中共你完球蛋了！
 
  
 
