--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,17 +1,23 @@
 ---
-title: HPay的上线战友们要做三件事
+title: 共产党在人种上绝对的基因崇拜和种族主义
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968433/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968510/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-30～8-35～2.png)
+战友问：我就是不太清楚，为什么共产党要收集这些领导人或是运动员们的尿和大便？有什么邪恶的目的在背后？
 
-2月2日，郭文贵先生在GTV大直播透露，喜支付H-Pay正式上线之际，战友们的首要任务有三点：第一，每时每刻地宣传H-Pay，使用H-Pay；第二，全球喜马拉雅农场要竭尽全力地以合法手段推广H-Pay，增加H-Pay的使用场合；第三，认真研究H-Pay的可应用领域，挖掘H-Pay的独特使用方法。
+七哥：这个就像我去北朝鲜，在北朝鲜人眼里，我这样的人就不是一般人，基因优秀！还有他要了解这个人，为什么14亿中国人有这样的人？当年这个奥运会的时候，1996年还是1998年那一次，你看那个中央，那个李瑞环，李瑞环那小木匠来说：我们要把全人类最优秀的人种和精英聚集在地球的一个点上，让这个点上所有聚会之后散发的能量和所有这些精英中的精英，最健康的基因全都给采下来。小木匠都有这脑子。当时我才多大呀，我就想为啥要这个啊？”他们要跟咱们这个结合后，能生产出更优秀的人种，那真是一种大的财富。”当时最有权力的人北京副市长张百发说。”这些人来了以后，能在他们身上拿点啥就拿点啥。”当时那个体育局局长袁伟民傻乎乎地在那儿跟真的似的说，就像个太监。最后让李瑞环给打断，”这些说太多了，你先把这个奥运会给申请下来再说。” 就共产党这个邪恶，跟北朝鲜一样，这些老杂毛们。他们是人体崇拜优秀基因崇拜，在人种上绝对有阶级主义，他们跟我们常人是不一样的。共产党人怎么看待白人和黑人？怎么看待自己人？怎么看待农村人和城市人？怎么看待党外人和党内人？他们满脑子都是阶级，都是种族主义。这就是真实的共产党，所以这些运动员们来了，他们是又恨又爱！
 
-*编辑：东京樱花团/tdownc2p
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+*发布：开智则立*
 
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
