--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,24 +1,16 @@
 ---
-title: 七哥童年经历
+title: 被抓的董宏曾经对文贵先生说共产党就是黑社会流氓骗子
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968404/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968489/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-雷蒙：
-我就是刚才发表一下感想吧，就是因为七哥从很小的可能8岁可能就开始用自己的实际行动去，经历了这么多，就是一步一步，走到今天的这个位置。所以说对我们每个人来说都是都是一个借鉴和和学习的地方吧。就是我们每个人都需要通过自己一个实际行动啊去踏踏实实的走好每一步，就包括我们把新中国联邦啊takedown CCP每一步，不能，真正的去落实到实处，而不是说我们，听完节目之后就结束了，每一步呢，我们都希望有一个实际的行动方案，或者说我们每一每一个阶段我们都有相应的目标去实现它好的。说一下我的个人的这个分享啊，就是说我觉得七哥最牛的一点就是他把整个政治经济军事文化啊，还有潮流这些东西包括音乐，都就是说跟共产党在不同的维度在作战。因为共产党他毕竟是一个国家力量，他政权对吧？它的力量还是相对比较强大的，拥有核武器，然后呢？我们把它拖入到各个领域里面去作战它的力量就会分化瓦解，而不是说聚成一个，这样一个拳头一样的，因为老毛在之前不是说嘛他打他这个就歼敌的话，他一定就是说这股力量去歼一股力量是吧？那我们就把他的整个的力量给他分散瓦解，我们在每个领域都对他形成合围，形成这种最优势的这个力量去去歼他，所以我觉得这个可能也是记着一个策略啊，不知道七哥您怎么看？
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥童年经历-.001.jpeg)
-2022年1月7日文贵大直播
+1月30日，郭文贵先生在GTV大直播透露，被判死缓的董宏，是王岐山最信任的马仔，拿走中国多少钱？董曾告诉郭先生，共产党就是黑社会流氓骗子，傻子才相信它 ，聪明人利用这个黑社会达到自己的目的。中国第一家破产的广东信托公司，就是王、董和康典干的。后来，董又把张宏伟的新华人寿给了康，王、董、康等因此在瑞士拿走了几百亿美元。
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
